--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -108,7 +108,7 @@ deny 109.70.100.70;
 deny 109.70.100.71;
 deny 113.20.31.38;
 deny 114.35.245.150;
-deny 1.168.177.91;
+deny 1.170.198.8;
 deny 118.163.74.160;
 deny 118.193.64.139;
 deny 118.194.231.50;
@@ -132,7 +132,6 @@ deny 139.99.172.11;
 deny 139.99.8.57;
 deny 141.164.38.67;
 deny 141.98.11.62;
-deny 142.171.12.88;
 deny 142.44.133.81;
 deny 144.172.118.4;
 deny 144.172.118.41;
@@ -202,6 +201,7 @@ deny 173.255.198.243;
 deny 176.118.193.33;
 deny 176.121.81.51;
 deny 176.58.100.98;
+deny 176.58.121.177;
 deny 176.65.148.133;
 deny 176.65.148.3;
 deny 176.65.149.100;
@@ -978,6 +978,7 @@ deny 23.191.200.6;
 deny 23.191.200.7;
 deny 23.191.200.8;
 deny 23.191.200.9;
+deny 23.236.122.193;
 deny 2400:8901::f03c:94ff:fe7f:59f6;
 deny 2400:8901::f03c:95ff:fe89:4a88;
 deny 2400:8905::f03c:95ff:fe67:ec03;
@@ -1222,6 +1223,7 @@ deny 2a01:5e0:36:cf2a::1;
 deny 2a01:6340:2:501::10;
 deny 2a01:6340:2:501::20;
 deny 2a01:7e00::f03c:91ff:fe56:2656;
+deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a01:7e01::f03c:95ff:fe52:c6f8;
 deny 2a02:16d0:0:5::1;
 deny 2a02:2479:0:6e00::1;
@@ -1322,7 +1324,6 @@ deny 2a09:61c0::22;
 deny 2a09:61c0::beef;
 deny 2a09:b280:fe01:61::a;
 deny 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
-deny 2a0b:7140:1:1:5054:ff:fe12:2305;
 deny 2a0b:f4c0:16c:10::1;
 deny 2a0b:f4c0:16c:1::1;
 deny 2a0b:f4c0:16c:11::1;
@@ -1654,7 +1655,6 @@ deny 2a12:a800:9:1:193:26:115:61;
 deny 31.129.22.65;
 deny 31.133.0.210;
 deny 31.184.236.104;
-deny 31.220.75.237;
 deny 31.44.238.25;
 deny 35.0.127.52;
 deny 37.120.239.59;
@@ -1665,11 +1665,11 @@ deny 37.228.129.63;
 deny 37.48.120.196;
 deny 37.48.70.156;
 deny 37.77.56.238;
+deny 38.242.254.131;
 deny 38.97.116.242;
 deny 38.97.116.243;
 deny 38.97.116.244;
 deny 40.160.3.1;
-deny 45.11.183.87;
 deny 45.11.59.28;
 deny 45.12.3.80;
 deny 45.128.133.242;
@@ -1900,6 +1900,7 @@ deny 88.80.26.2;
 deny 88.80.26.3;
 deny 88.80.26.4;
 deny 89.110.112.209;
+deny 89.110.95.200;
 deny 89.147.108.90;
 deny 89.147.110.118;
 deny 89.147.110.154;
@@ -1960,6 +1961,5 @@ deny 95.142.161.63;
 deny 95.143.193.125;
 deny 95.168.173.143;
 deny 95.211.174.137;
-deny 95.211.244.28;
 deny 95.216.107.148;
 deny 98.128.173.33;
