--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -20,6 +20,7 @@ allow 104.167.242.117;
 allow 104.167.242.118;
 allow 104.192.3.74;
 allow 104.219.236.100;
+allow 104.234.74.33;
 allow 104.244.72.115;
 allow 104.244.72.132;
 allow 104.244.73.136;
@@ -91,7 +92,6 @@ allow 108.59.12.3;
 allow 108.61.189.136;
 allow 109.104.153.22;
 allow 109.169.33.163;
-allow 109.228.160.190;
 allow 109.69.67.17;
 allow 109.70.100.1;
 allow 109.70.100.2;
@@ -108,7 +108,7 @@ allow 109.70.100.70;
 allow 109.70.100.71;
 allow 113.20.31.38;
 allow 114.35.245.150;
-allow 1.170.198.8;
+allow 114.41.25.74;
 allow 118.163.74.160;
 allow 118.193.64.139;
 allow 118.194.231.50;
@@ -132,6 +132,7 @@ allow 139.99.172.11;
 allow 139.99.8.57;
 allow 141.164.38.67;
 allow 141.98.11.62;
+allow 142.171.12.88;
 allow 142.44.133.81;
 allow 144.172.118.4;
 allow 144.172.118.41;
@@ -1006,6 +1007,7 @@ allow 2600:3c0b::f03c:95ff:fefa:bdff;
 allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
 allow 2602:2e5::104;
+allow 2602:fa81:41::a;
 allow 2602:fa8a:3:a::a;
 allow 2602:fc24:10:61b::1;
 allow 2602:fc24:12:81a6::1;
@@ -1100,6 +1102,7 @@ allow 2607:5300:203:b45b::;
 allow 2607:5300:205:200::4894;
 allow 2607:5300:60:566f::1;
 allow 2607:5300:61:785::;
+allow 2607:f130:0:ed:216:3cff:febd:3b42;
 allow 2607:f530:8002::19;
 allow 2607:fa18:3:beef:f001:c0de:feed:ba5e;
 allow 2620:7:6001::101;
@@ -1279,6 +1282,7 @@ allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:78fc::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
@@ -1802,6 +1806,7 @@ allow 51.81.222.62;
 allow 5.181.80.107;
 allow 5.196.95.34;
 allow 5.255.100.219;
+allow 5.255.100.26;
 allow 5.255.101.131;
 allow 5.255.103.235;
 allow 5.255.104.202;
@@ -1837,7 +1842,6 @@ allow 5.45.98.162;
 allow 57.128.220.107;
 allow 5.79.66.19;
 allow 62.133.45.2;
-allow 62.133.63.146;
 allow 62.182.84.146;
 allow 64.190.76.10;
 allow 64.190.76.11;
@@ -1860,7 +1864,6 @@ allow 77.246.98.159;
 allow 77.48.28.239;
 allow 77.81.247.72;
 allow 78.142.18.219;
-allow 78.159.131.96;
 allow 78.21.63.183;
 allow 79.100.235.29;
 allow 80.241.60.207;
@@ -1961,5 +1964,6 @@ allow 95.142.161.63;
 allow 95.143.193.125;
 allow 95.168.173.143;
 allow 95.211.174.137;
+allow 95.211.244.28;
 allow 95.216.107.148;
 allow 98.128.173.33;
