--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -108,7 +108,7 @@ allow 109.70.100.70;
 allow 109.70.100.71;
 allow 113.20.31.38;
 allow 114.35.245.150;
-allow 114.41.25.74;
+allow 1.170.208.170;
 allow 118.163.74.160;
 allow 118.193.64.139;
 allow 118.194.231.50;
@@ -151,7 +151,6 @@ allow 152.53.133.14;
 allow 152.53.53.243;
 allow 154.16.116.61;
 allow 154.41.95.1;
-allow 154.83.88.219;
 allow 158.69.252.116;
 allow 160.119.249.240;
 allow 161.129.68.162;
@@ -200,7 +199,6 @@ allow 173.0.3.111;
 allow 173.237.206.68;
 allow 173.255.198.243;
 allow 176.118.193.33;
-allow 176.121.81.51;
 allow 176.58.100.98;
 allow 176.58.121.177;
 allow 176.65.148.133;
@@ -532,6 +530,7 @@ allow 185.42.170.203;
 allow 185.56.171.94;
 allow 185.56.83.83;
 allow 185.82.219.109;
+allow 185.84.31.254;
 allow 188.165.200.97;
 allow 188.214.104.21;
 allow 188.239.191.25;
@@ -1261,6 +1260,7 @@ allow 2a03:4000:6:614:d803:40ff:fec3:832a;
 allow 2a03:4000:66:15:18a0:6bff:fe90:3147;
 allow 2a03:4000:6:d042:5440:88ff:fedd:4ae5;
 allow 2a03:4000:6:e047:6494:62ff:fe3f:85b8;
+allow 2a03:6f20:531::254;
 allow 2a03:e600:100::1;
 allow 2a03:e600:100::2;
 allow 2a03:e600:100::3;
@@ -1567,7 +1567,6 @@ allow 2a0e:bfc2:0:24::3456;
 allow 2a0e:bfc7:0:3::2d83;
 allow 2a0e:bfc7:0:4::6e7a;
 allow 2a0e:e701:1198::1;
-allow 2a0f:7803:fac2:ab6d::1;
 allow 2a0f:7803:fac5:cd0::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:85c1:356:424c::1;
@@ -1903,7 +1902,6 @@ allow 88.80.26.2;
 allow 88.80.26.3;
 allow 88.80.26.4;
 allow 89.110.112.209;
-allow 89.110.95.200;
 allow 89.147.108.90;
 allow 89.147.110.118;
 allow 89.147.110.154;
@@ -1959,6 +1957,7 @@ allow 94.16.121.91;
 allow 94.230.208.147;
 allow 94.230.208.148;
 allow 94.72.103.33;
+allow 94.75.225.81;
 allow 95.128.43.164;
 allow 95.142.161.63;
 allow 95.143.193.125;
