Update lists at 20250508-0900

--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -691,6 +691,7 @@ allow 2a0e:bfc2:0:24::3456;
 allow 2a0e:bfc7:0:3::2d83;
 allow 2a0e:bfc7:0:4::6e7a;
 allow 2a0e:e701:1198::1;
+allow 2a0f:7803:fac2:ab6d::1;
 allow 2a0f:7803:fac5:cd0::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:85c1:356:424c::1;
