--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -151,6 +151,7 @@ deny 152.53.133.14;
 deny 152.53.53.243;
 deny 154.16.116.61;
 deny 154.41.95.1;
+deny 154.83.88.219;
 deny 158.69.252.116;
 deny 160.119.249.240;
 deny 161.129.68.162;
@@ -210,6 +211,7 @@ deny 176.65.149.87;
 deny 176.65.149.88;
 deny 176.65.149.96;
 deny 176.97.114.202;
+deny 177.149.139.103;
 deny 178.17.170.144;
 deny 178.17.170.23;
 deny 178.17.171.102;
@@ -225,7 +227,6 @@ deny 178.218.144.51;
 deny 178.218.144.64;
 deny 178.218.144.96;
 deny 178.218.144.99;
-deny 179.35.14.215;
 deny 179.43.128.16;
 deny 179.43.159.194;
 deny 179.43.159.195;
@@ -1567,6 +1568,7 @@ deny 2a0e:bfc2:0:24::3456;
 deny 2a0e:bfc7:0:3::2d83;
 deny 2a0e:bfc7:0:4::6e7a;
 deny 2a0e:e701:1198::1;
+deny 2a0f:7803:fac2:ab6d::1;
 deny 2a0f:7803:fac5:cd0::1;
 deny 2a0f:85c1:356:3238::1;
 deny 2a0f:85c1:356:424c::1;
@@ -1863,7 +1865,6 @@ deny 77.246.98.159;
 deny 77.48.28.239;
 deny 77.81.247.72;
 deny 78.142.18.219;
-deny 78.21.63.183;
 deny 79.100.235.29;
 deny 80.241.60.207;
 deny 80.67.167.81;
