--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -1,6 +1,7 @@
 allow 102.130.113.9;
 allow 102.130.117.167;
 allow 102.130.127.117;
+allow 102.211.56.105;
 allow 102.211.56.12;
 allow 102.211.56.13;
 allow 102.211.56.250;
@@ -108,7 +109,7 @@ allow 109.70.100.70;
 allow 109.70.100.71;
 allow 113.20.31.38;
 allow 114.35.245.150;
-allow 1.170.208.170;
+allow 114.41.30.70;
 allow 118.163.74.160;
 allow 118.193.64.139;
 allow 118.194.231.50;
@@ -257,7 +258,6 @@ allow 185.107.57.66;
 allow 185.112.144.11;
 allow 185.112.146.167;
 allow 185.113.128.30;
-allow 185.113.8.186;
 allow 185.120.16.171;
 allow 185.120.16.176;
 allow 185.129.61.1;
@@ -599,13 +599,6 @@ allow 192.42.116.28;
 allow 192.99.149.111;
 allow 193.105.134.150;
 allow 193.105.134.155;
-allow 193.189.100.194;
-allow 193.189.100.195;
-allow 193.189.100.196;
-allow 193.189.100.197;
-allow 193.189.100.198;
-allow 193.189.100.199;
-allow 193.189.100.200;
 allow 193.189.100.201;
 allow 193.189.100.202;
 allow 193.189.100.203;
@@ -1574,13 +1567,6 @@ allow 2a0f:85c1:356:3238::1;
 allow 2a0f:85c1:356:424c::1;
 allow 2a0f:85c1:356:5bdd::beef;
 allow 2a0f:cdc6:500:11e3::2;
-allow 2a0f:df00:0:255::194;
-allow 2a0f:df00:0:255::195;
-allow 2a0f:df00:0:255::196;
-allow 2a0f:df00:0:255::197;
-allow 2a0f:df00:0:255::198;
-allow 2a0f:df00:0:255::199;
-allow 2a0f:df00:0:255::200;
 allow 2a0f:df00:0:255::201;
 allow 2a0f:df00:0:255::202;
 allow 2a0f:df00:0:255::203;
@@ -1657,9 +1643,11 @@ allow 2a12:a800:9:1:193:26:115:161;
 allow 2a12:a800:9:1:193:26:115:212;
 allow 2a12:a800:9:1:193:26:115:43;
 allow 2a12:a800:9:1:193:26:115:61;
+allow 2c0f:6c0:0:4::95ea;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.184.236.104;
+allow 31.220.75.237;
 allow 31.44.238.25;
 allow 35.0.127.52;
 allow 37.120.239.59;
@@ -1670,7 +1658,6 @@ allow 37.228.129.63;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 37.77.56.238;
-allow 38.242.254.131;
 allow 38.97.116.242;
 allow 38.97.116.243;
 allow 38.97.116.244;
@@ -1886,7 +1873,6 @@ allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.19.182.20;
 allow 84.211.226.13;
-allow 84.235.236.189;
 allow 84.239.46.144;
 allow 85.239.41.130;
 allow 85.93.218.204;
@@ -1903,6 +1889,7 @@ allow 88.80.26.2;
 allow 88.80.26.3;
 allow 88.80.26.4;
 allow 89.110.112.209;
+allow 89.110.95.200;
 allow 89.147.108.90;
 allow 89.147.110.118;
 allow 89.147.110.154;
