--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -697,13 +697,6 @@ allow 2a0f:85c1:356:3238::1;
 allow 2a0f:85c1:356:424c::1;
 allow 2a0f:85c1:356:5bdd::beef;
 allow 2a0f:cdc6:500:11e3::2;
-allow 2a0f:df00:0:255::194;
-allow 2a0f:df00:0:255::195;
-allow 2a0f:df00:0:255::196;
-allow 2a0f:df00:0:255::197;
-allow 2a0f:df00:0:255::198;
-allow 2a0f:df00:0:255::199;
-allow 2a0f:df00:0:255::200;
 allow 2a0f:df00:0:255::201;
 allow 2a0f:df00:0:255::202;
 allow 2a0f:df00:0:255::203;
@@ -780,3 +773,4 @@ allow 2a12:a800:9:1:193:26:115:161;
 allow 2a12:a800:9:1:193:26:115:212;
 allow 2a12:a800:9:1:193:26:115:43;
 allow 2a12:a800:9:1:193:26:115:61;
+allow 2c0f:6c0:0:4::95ea;
