--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -697,13 +697,6 @@ deny 2a0f:85c1:356:3238::1;
 deny 2a0f:85c1:356:424c::1;
 deny 2a0f:85c1:356:5bdd::beef;
 deny 2a0f:cdc6:500:11e3::2;
-deny 2a0f:df00:0:255::194;
-deny 2a0f:df00:0:255::195;
-deny 2a0f:df00:0:255::196;
-deny 2a0f:df00:0:255::197;
-deny 2a0f:df00:0:255::198;
-deny 2a0f:df00:0:255::199;
-deny 2a0f:df00:0:255::200;
 deny 2a0f:df00:0:255::201;
 deny 2a0f:df00:0:255::202;
 deny 2a0f:df00:0:255::203;
@@ -780,3 +773,4 @@ deny 2a12:a800:9:1:193:26:115:161;
 deny 2a12:a800:9:1:193:26:115:212;
 deny 2a12:a800:9:1:193:26:115:43;
 deny 2a12:a800:9:1:193:26:115:61;
+deny 2c0f:6c0:0:4::95ea;
