--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -697,13 +697,6 @@ set_real_ip_from 2a0f:85c1:356:3238::1;
 set_real_ip_from 2a0f:85c1:356:424c::1;
 set_real_ip_from 2a0f:85c1:356:5bdd::beef;
 set_real_ip_from 2a0f:cdc6:500:11e3::2;
-set_real_ip_from 2a0f:df00:0:255::194;
-set_real_ip_from 2a0f:df00:0:255::195;
-set_real_ip_from 2a0f:df00:0:255::196;
-set_real_ip_from 2a0f:df00:0:255::197;
-set_real_ip_from 2a0f:df00:0:255::198;
-set_real_ip_from 2a0f:df00:0:255::199;
-set_real_ip_from 2a0f:df00:0:255::200;
 set_real_ip_from 2a0f:df00:0:255::201;
 set_real_ip_from 2a0f:df00:0:255::202;
 set_real_ip_from 2a0f:df00:0:255::203;
@@ -780,3 +773,4 @@ set_real_ip_from 2a12:a800:9:1:193:26:115:161;
 set_real_ip_from 2a12:a800:9:1:193:26:115:212;
 set_real_ip_from 2a12:a800:9:1:193:26:115:43;
 set_real_ip_from 2a12:a800:9:1:193:26:115:61;
+set_real_ip_from 2c0f:6c0:0:4::95ea;
