--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -109,7 +109,7 @@ set_real_ip_from 109.70.100.70;
 set_real_ip_from 109.70.100.71;
 set_real_ip_from 113.20.31.38;
 set_real_ip_from 114.35.245.150;
-set_real_ip_from 114.41.30.70;
+set_real_ip_from 1.170.235.188;
 set_real_ip_from 118.163.74.160;
 set_real_ip_from 118.193.64.139;
 set_real_ip_from 118.194.231.50;
@@ -599,6 +599,13 @@ set_real_ip_from 192.42.116.28;
 set_real_ip_from 192.99.149.111;
 set_real_ip_from 193.105.134.150;
 set_real_ip_from 193.105.134.155;
+set_real_ip_from 193.189.100.194;
+set_real_ip_from 193.189.100.195;
+set_real_ip_from 193.189.100.196;
+set_real_ip_from 193.189.100.197;
+set_real_ip_from 193.189.100.198;
+set_real_ip_from 193.189.100.199;
+set_real_ip_from 193.189.100.200;
 set_real_ip_from 193.189.100.201;
 set_real_ip_from 193.189.100.202;
 set_real_ip_from 193.189.100.203;
@@ -721,18 +728,6 @@ set_real_ip_from 2001:67c:6ec:203:192:42:116:183;
 set_real_ip_from 2001:67c:6ec:203:192:42:116:184;
 set_real_ip_from 2001:67c:6ec:203:192:42:116:185;
 set_real_ip_from 2001:67c:6ec:203:192:42:116:186;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:208;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:209;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:210;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:211;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:212;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:213;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:214;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:215;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:216;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:217;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:218;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:219;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5513;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5514;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5515;
@@ -777,6 +772,15 @@ set_real_ip_from 2001:67c:e60:c0c:192:42:116:200;
 set_real_ip_from 2001:67c:e60:c0c:192:42:116:201;
 set_real_ip_from 2001:67c:e60:c0c:192:42:116:202;
 set_real_ip_from 2001:67c:e60:c0c:192:42:116:203;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:209;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:210;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:212;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:213;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:215;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:216;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:217;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:218;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:219;
 set_real_ip_from 2001:910:1400:107::2;
 set_real_ip_from 2001:ac8:22:43::20e5:a7d7;
 set_real_ip_from 2001:b011:4006:7826::b;
@@ -1221,6 +1225,7 @@ set_real_ip_from 2a01:6340:2:501::20;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe56:2656;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
 set_real_ip_from 2a01:7e01::f03c:95ff:fe52:c6f8;
+set_real_ip_from 2a01:e5c0:6e3b::2;
 set_real_ip_from 2a02:16d0:0:5::1;
 set_real_ip_from 2a02:2479:0:6e00::1;
 set_real_ip_from 2a02:2970:1001::4b;
@@ -1276,7 +1281,6 @@ set_real_ip_from 2a04:52c0:104:31e6::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
 set_real_ip_from 2a04:52c0:105:78fc::1;
-set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:d219::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
 set_real_ip_from 2a04:52c0:116:e0e3::1;
@@ -1520,7 +1524,6 @@ set_real_ip_from 2a0c:5cc0:1:1::293c:1518;
 set_real_ip_from 2a0c:e300::23;
 set_real_ip_from 2a0d:8140:1fff:22d0::1;
 set_real_ip_from 2a0d:8140:1fff:395e::1;
-set_real_ip_from 2a0d:8140:1fff:fe40::1;
 set_real_ip_from 2a0d:bbc7:0:1::10a;
 set_real_ip_from 2a0d:bbc7:0:1::132;
 set_real_ip_from 2a0d:bbc7:0:1::1df;
@@ -1567,6 +1570,13 @@ set_real_ip_from 2a0f:85c1:356:3238::1;
 set_real_ip_from 2a0f:85c1:356:424c::1;
 set_real_ip_from 2a0f:85c1:356:5bdd::beef;
 set_real_ip_from 2a0f:cdc6:500:11e3::2;
+set_real_ip_from 2a0f:df00:0:255::194;
+set_real_ip_from 2a0f:df00:0:255::195;
+set_real_ip_from 2a0f:df00:0:255::196;
+set_real_ip_from 2a0f:df00:0:255::197;
+set_real_ip_from 2a0f:df00:0:255::198;
+set_real_ip_from 2a0f:df00:0:255::199;
+set_real_ip_from 2a0f:df00:0:255::200;
 set_real_ip_from 2a0f:df00:0:255::201;
 set_real_ip_from 2a0f:df00:0:255::202;
 set_real_ip_from 2a0f:df00:0:255::203;
@@ -1668,7 +1678,6 @@ set_real_ip_from 45.128.133.242;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
 set_real_ip_from 45.137.99.10;
-set_real_ip_from 45.137.99.144;
 set_real_ip_from 45.137.99.216;
 set_real_ip_from 45.138.16.107;
 set_real_ip_from 45.138.16.113;
@@ -1794,7 +1803,6 @@ set_real_ip_from 51.81.222.62;
 set_real_ip_from 5.181.80.107;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.219;
-set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.103.235;
 set_real_ip_from 5.255.104.202;
@@ -1848,6 +1856,7 @@ set_real_ip_from 71.19.144.106;
 set_real_ip_from 72.14.179.10;
 set_real_ip_from 72.211.49.235;
 set_real_ip_from 72.235.129.116;
+set_real_ip_from 77.221.138.73;
 set_real_ip_from 77.246.98.159;
 set_real_ip_from 77.48.28.239;
 set_real_ip_from 77.81.247.72;
@@ -1888,8 +1897,6 @@ set_real_ip_from 88.80.20.86;
 set_real_ip_from 88.80.26.2;
 set_real_ip_from 88.80.26.3;
 set_real_ip_from 88.80.26.4;
-set_real_ip_from 89.110.112.209;
-set_real_ip_from 89.110.95.200;
 set_real_ip_from 89.147.108.90;
 set_real_ip_from 89.147.110.118;
 set_real_ip_from 89.147.110.154;
