--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -46,18 +46,6 @@ set_real_ip_from 2001:67c:6ec:203:192:42:116:183;
 set_real_ip_from 2001:67c:6ec:203:192:42:116:184;
 set_real_ip_from 2001:67c:6ec:203:192:42:116:185;
 set_real_ip_from 2001:67c:6ec:203:192:42:116:186;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:208;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:209;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:210;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:211;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:212;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:213;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:214;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:215;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:216;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:217;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:218;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:219;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5513;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5514;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5515;
@@ -102,6 +90,15 @@ set_real_ip_from 2001:67c:e60:c0c:192:42:116:200;
 set_real_ip_from 2001:67c:e60:c0c:192:42:116:201;
 set_real_ip_from 2001:67c:e60:c0c:192:42:116:202;
 set_real_ip_from 2001:67c:e60:c0c:192:42:116:203;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:209;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:210;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:212;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:213;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:215;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:216;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:217;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:218;
+set_real_ip_from 2001:67c:e60:c0c:192:42:116:219;
 set_real_ip_from 2001:910:1400:107::2;
 set_real_ip_from 2001:ac8:22:43::20e5:a7d7;
 set_real_ip_from 2001:b011:4006:7826::b;
@@ -351,6 +348,7 @@ set_real_ip_from 2a01:6340:2:501::20;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe56:2656;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
 set_real_ip_from 2a01:7e01::f03c:95ff:fe52:c6f8;
+set_real_ip_from 2a01:e5c0:6e3b::2;
 set_real_ip_from 2a02:16d0:0:5::1;
 set_real_ip_from 2a02:2479:0:6e00::1;
 set_real_ip_from 2a02:2970:1001::4b;
@@ -406,7 +404,6 @@ set_real_ip_from 2a04:52c0:104:31e6::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
 set_real_ip_from 2a04:52c0:105:78fc::1;
-set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:d219::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
 set_real_ip_from 2a04:52c0:116:e0e3::1;
@@ -650,7 +647,6 @@ set_real_ip_from 2a0c:5cc0:1:1::293c:1518;
 set_real_ip_from 2a0c:e300::23;
 set_real_ip_from 2a0d:8140:1fff:22d0::1;
 set_real_ip_from 2a0d:8140:1fff:395e::1;
-set_real_ip_from 2a0d:8140:1fff:fe40::1;
 set_real_ip_from 2a0d:bbc7:0:1::10a;
 set_real_ip_from 2a0d:bbc7:0:1::132;
 set_real_ip_from 2a0d:bbc7:0:1::1df;
@@ -697,6 +693,13 @@ set_real_ip_from 2a0f:85c1:356:3238::1;
 set_real_ip_from 2a0f:85c1:356:424c::1;
 set_real_ip_from 2a0f:85c1:356:5bdd::beef;
 set_real_ip_from 2a0f:cdc6:500:11e3::2;
+set_real_ip_from 2a0f:df00:0:255::194;
+set_real_ip_from 2a0f:df00:0:255::195;
+set_real_ip_from 2a0f:df00:0:255::196;
+set_real_ip_from 2a0f:df00:0:255::197;
+set_real_ip_from 2a0f:df00:0:255::198;
+set_real_ip_from 2a0f:df00:0:255::199;
+set_real_ip_from 2a0f:df00:0:255::200;
 set_real_ip_from 2a0f:df00:0:255::201;
 set_real_ip_from 2a0f:df00:0:255::202;
 set_real_ip_from 2a0f:df00:0:255::203;
