Update lists at 20250509-0001

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -21,7 +21,6 @@ allow 104.167.242.117;
 allow 104.167.242.118;
 allow 104.192.3.74;
 allow 104.219.236.100;
-allow 104.234.74.33;
 allow 104.244.72.115;
 allow 104.244.72.132;
 allow 104.244.73.136;
@@ -74,7 +73,6 @@ allow 107.189.4.12;
 allow 107.189.4.209;
 allow 107.189.5.121;
 allow 107.189.5.188;
-allow 107.189.5.249;
 allow 107.189.5.7;
 allow 107.189.6.124;
 allow 107.189.7.141;
@@ -109,7 +107,7 @@ allow 109.70.100.70;
 allow 109.70.100.71;
 allow 113.20.31.38;
 allow 114.35.245.150;
-allow 1.168.184.67;
+allow 114.41.0.65;
 allow 118.163.74.160;
 allow 118.193.64.139;
 allow 118.194.231.50;
@@ -175,7 +173,6 @@ allow 163.172.45.102;
 allow 164.132.172.209;
 allow 165.73.242.163;
 allow 166.70.207.2;
-allow 166.88.225.32;
 allow 171.25.193.20;
 allow 171.25.193.234;
 allow 171.25.193.235;
@@ -202,6 +199,7 @@ allow 173.237.206.68;
 allow 173.255.198.243;
 allow 176.118.193.33;
 allow 176.58.100.98;
+allow 176.58.121.177;
 allow 176.65.148.133;
 allow 176.65.148.3;
 allow 176.65.149.100;
@@ -998,7 +996,6 @@ allow 2600:3c0b::f03c:95ff:fefa:bdff;
 allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
 allow 2602:2e5::104;
-allow 2602:fa81:41::a;
 allow 2602:fa8a:3:a::a;
 allow 2602:fc24:10:61b::1;
 allow 2602:fc24:12:81a6::1;
@@ -1038,7 +1035,6 @@ allow 2605:6400:30:ed0c:b477:4972:756a:2f42;
 allow 2605:6400:30:edc3::34;
 allow 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 allow 2605:6400:30:efba:dead::;
-allow 2605:6400:30:f04d:2605:6400:30:30;
 allow 2605:6400:30:f05d:c272:5525:72b1:e64c;
 allow 2605:6400:30:f060:be62:b857:b818:9144;
 allow 2605:6400:30:f08c:45b7:4a99:a154:694e;
@@ -1217,6 +1213,7 @@ allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
 allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
+allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a01:7e01::f03c:95ff:fe52:c6f8;
 allow 2a01:e5c0:6e3b::2;
 allow 2a02:16d0:0:5::1;
@@ -1882,7 +1879,6 @@ allow 88.80.20.86;
 allow 88.80.26.2;
 allow 88.80.26.3;
 allow 88.80.26.4;
-allow 89.110.95.200;
 allow 89.147.108.90;
 allow 89.147.110.118;
 allow 89.147.110.154;
