Update lists at 20250509-0600

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -73,7 +73,6 @@ allow 107.189.4.12;
 allow 107.189.4.209;
 allow 107.189.5.121;
 allow 107.189.5.188;
-allow 107.189.5.249;
 allow 107.189.5.7;
 allow 107.189.6.124;
 allow 107.189.7.141;
@@ -153,7 +152,6 @@ allow 152.53.53.243;
 allow 154.16.116.61;
 allow 154.41.95.1;
 allow 154.41.95.2;
-allow 154.83.88.219;
 allow 158.69.252.116;
 allow 160.119.249.240;
 allow 161.129.68.162;
@@ -256,6 +254,7 @@ allow 185.107.57.65;
 allow 185.107.57.66;
 allow 185.112.144.11;
 allow 185.112.146.167;
+allow 185.112.146.168;
 allow 185.113.128.30;
 allow 185.120.16.171;
 allow 185.120.16.176;
@@ -1037,7 +1036,6 @@ allow 2605:6400:30:ed0c:b477:4972:756a:2f42;
 allow 2605:6400:30:edc3::34;
 allow 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 allow 2605:6400:30:efba:dead::;
-allow 2605:6400:30:f04d:2605:6400:30:30;
 allow 2605:6400:30:f05d:c272:5525:72b1:e64c;
 allow 2605:6400:30:f060:be62:b857:b818:9144;
 allow 2605:6400:30:f08c:45b7:4a99:a154:694e;
@@ -1320,6 +1318,7 @@ allow 2a09:61c0::22;
 allow 2a09:61c0::beef;
 allow 2a09:b280:fe01:61::a;
 allow 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
+allow 2a0b:64c0:f802:1::a;
 allow 2a0b:f4c0:16c:1::1;
 allow 2a0b:f4c0:16c:13::1;
 allow 2a0b:f4c0:16c:14::1;
@@ -1550,7 +1549,6 @@ allow 2a0e:bfc2:0:24::3456;
 allow 2a0e:bfc7:0:3::2d83;
 allow 2a0e:bfc7:0:4::6e7a;
 allow 2a0e:e701:1198::1;
-allow 2a0f:7803:fac2:ab6d::1;
 allow 2a0f:7803:fac5:cd0::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:85c1:356:424c::1;
@@ -1639,10 +1637,12 @@ allow 2a12:a800:9:1:193:26:115:161;
 allow 2a12:a800:9:1:193:26:115:212;
 allow 2a12:a800:9:1:193:26:115:43;
 allow 2a12:a800:9:1:193:26:115:61;
+allow 2a14:3f87:6920::126;
 allow 2c0f:6c0:0:4::95ea;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.184.236.104;
+allow 31.220.75.237;
 allow 31.44.238.25;
 allow 35.0.127.52;
 allow 37.120.239.59;
@@ -1653,7 +1653,6 @@ allow 37.228.129.63;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 37.77.56.238;
-allow 38.242.254.131;
 allow 38.97.116.242;
 allow 38.97.116.243;
 allow 38.97.116.244;
@@ -1679,6 +1678,7 @@ allow 45.138.16.42;
 allow 45.138.16.69;
 allow 45.138.16.76;
 allow 45.138.87.142;
+allow 45.139.50.204;
 allow 45.141.215.110;
 allow 45.141.215.111;
 allow 45.141.215.114;
@@ -1760,6 +1760,7 @@ allow 45.90.185.116;
 allow 45.90.185.117;
 allow 45.90.185.118;
 allow 45.90.185.119;
+allow 45.90.185.67;
 allow 45.9.156.100;
 allow 45.9.156.101;
 allow 45.9.168.103;
@@ -1825,6 +1826,7 @@ allow 5.45.98.162;
 allow 57.128.220.107;
 allow 5.79.66.19;
 allow 62.133.45.2;
+allow 62.182.84.146;
 allow 64.190.76.10;
 allow 64.190.76.11;
 allow 64.190.76.12;
