--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -170,7 +170,6 @@ deny 2605:6400:30:ed0c:b477:4972:756a:2f42;
 deny 2605:6400:30:edc3::34;
 deny 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 deny 2605:6400:30:efba:dead::;
-deny 2605:6400:30:f04d:2605:6400:30:30;
 deny 2605:6400:30:f05d:c272:5525:72b1:e64c;
 deny 2605:6400:30:f060:be62:b857:b818:9144;
 deny 2605:6400:30:f08c:45b7:4a99:a154:694e;
@@ -452,6 +451,7 @@ deny 2a09:61c0::22;
 deny 2a09:61c0::beef;
 deny 2a09:b280:fe01:61::a;
 deny 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
+deny 2a0b:64c0:f802:1::a;
 deny 2a0b:f4c0:16c:1::1;
 deny 2a0b:f4c0:16c:13::1;
 deny 2a0b:f4c0:16c:14::1;
@@ -682,7 +682,6 @@ deny 2a0e:bfc2:0:24::3456;
 deny 2a0e:bfc7:0:3::2d83;
 deny 2a0e:bfc7:0:4::6e7a;
 deny 2a0e:e701:1198::1;
-deny 2a0f:7803:fac2:ab6d::1;
 deny 2a0f:7803:fac5:cd0::1;
 deny 2a0f:85c1:356:3238::1;
 deny 2a0f:85c1:356:424c::1;
@@ -771,4 +770,5 @@ deny 2a12:a800:9:1:193:26:115:161;
 deny 2a12:a800:9:1:193:26:115:212;
 deny 2a12:a800:9:1:193:26:115:43;
 deny 2a12:a800:9:1:193:26:115:61;
+deny 2a14:3f87:6920::126;
 deny 2c0f:6c0:0:4::95ea;
