--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -73,6 +73,7 @@ set_real_ip_from 107.189.4.12;
 set_real_ip_from 107.189.4.209;
 set_real_ip_from 107.189.5.121;
 set_real_ip_from 107.189.5.188;
+set_real_ip_from 107.189.5.249;
 set_real_ip_from 107.189.5.7;
 set_real_ip_from 107.189.6.124;
 set_real_ip_from 107.189.7.141;
@@ -107,7 +108,7 @@ set_real_ip_from 109.70.100.70;
 set_real_ip_from 109.70.100.71;
 set_real_ip_from 113.20.31.38;
 set_real_ip_from 114.35.245.150;
-set_real_ip_from 1.170.212.59;
+set_real_ip_from 1.168.160.120;
 set_real_ip_from 118.163.74.160;
 set_real_ip_from 118.193.64.139;
 set_real_ip_from 118.194.231.50;
@@ -898,6 +899,7 @@ set_real_ip_from 205.185.121.177;
 set_real_ip_from 205.185.123.93;
 set_real_ip_from 205.185.124.176;
 set_real_ip_from 205.185.127.231;
+set_real_ip_from 206.71.158.65;
 set_real_ip_from 209.141.32.181;
 set_real_ip_from 209.141.32.198;
 set_real_ip_from 209.141.34.15;
@@ -1036,6 +1038,7 @@ set_real_ip_from 2605:6400:30:ed0c:b477:4972:756a:2f42;
 set_real_ip_from 2605:6400:30:edc3::34;
 set_real_ip_from 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 set_real_ip_from 2605:6400:30:efba:dead::;
+set_real_ip_from 2605:6400:30:f04d:2605:6400:30:30;
 set_real_ip_from 2605:6400:30:f05d:c272:5525:72b1:e64c;
 set_real_ip_from 2605:6400:30:f060:be62:b857:b818:9144;
 set_real_ip_from 2605:6400:30:f08c:45b7:4a99:a154:694e;
@@ -1319,6 +1322,7 @@ set_real_ip_from 2a09:61c0::beef;
 set_real_ip_from 2a09:b280:fe01:61::a;
 set_real_ip_from 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 set_real_ip_from 2a0b:64c0:f802:1::a;
+set_real_ip_from 2a0b:64c0:f802:4c::a;
 set_real_ip_from 2a0b:f4c0:16c:1::1;
 set_real_ip_from 2a0b:f4c0:16c:13::1;
 set_real_ip_from 2a0b:f4c0:16c:14::1;
@@ -1637,7 +1641,8 @@ set_real_ip_from 2a12:a800:9:1:193:26:115:161;
 set_real_ip_from 2a12:a800:9:1:193:26:115:212;
 set_real_ip_from 2a12:a800:9:1:193:26:115:43;
 set_real_ip_from 2a12:a800:9:1:193:26:115:61;
-set_real_ip_from 2a14:3f87:6920::126;
+set_real_ip_from 2a14:3f87:6920::5b;
+set_real_ip_from 2a14:3f87:f001:30::a;
 set_real_ip_from 2c0f:6c0:0:4::95ea;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
@@ -1678,6 +1683,7 @@ set_real_ip_from 45.138.16.42;
 set_real_ip_from 45.138.16.69;
 set_real_ip_from 45.138.16.76;
 set_real_ip_from 45.138.87.142;
+set_real_ip_from 45.139.50.202;
 set_real_ip_from 45.139.50.204;
 set_real_ip_from 45.141.215.110;
 set_real_ip_from 45.141.215.111;
@@ -1760,7 +1766,7 @@ set_real_ip_from 45.90.185.116;
 set_real_ip_from 45.90.185.117;
 set_real_ip_from 45.90.185.118;
 set_real_ip_from 45.90.185.119;
-set_real_ip_from 45.90.185.67;
+set_real_ip_from 45.90.185.68;
 set_real_ip_from 45.9.156.100;
 set_real_ip_from 45.9.156.101;
 set_real_ip_from 45.9.168.103;
@@ -1885,6 +1891,7 @@ set_real_ip_from 88.80.20.86;
 set_real_ip_from 88.80.26.2;
 set_real_ip_from 88.80.26.3;
 set_real_ip_from 88.80.26.4;
+set_real_ip_from 89.110.95.200;
 set_real_ip_from 89.147.108.90;
 set_real_ip_from 89.147.110.118;
 set_real_ip_from 89.147.110.154;
