Update lists at 20250509-1801

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -108,7 +108,7 @@ allow 109.70.100.70;
 allow 109.70.100.71;
 allow 113.20.31.38;
 allow 114.35.245.150;
-allow 114.41.31.111;
+allow 114.41.32.58;
 allow 118.163.74.160;
 allow 118.193.64.139;
 allow 118.194.231.50;
@@ -284,7 +284,6 @@ allow 185.154.110.17;
 allow 185.165.169.239;
 allow 185.165.171.84;
 allow 185.170.114.25;
-allow 185.177.151.34;
 allow 185.183.157.214;
 allow 185.183.159.40;
 allow 185.191.204.254;
@@ -309,6 +308,7 @@ allow 185.220.100.252;
 allow 185.220.100.253;
 allow 185.220.100.254;
 allow 185.220.100.255;
+allow 185.220.101.0;
 allow 185.220.101.1;
 allow 185.220.101.10;
 allow 185.220.101.100;
@@ -411,6 +411,7 @@ allow 185.220.101.36;
 allow 185.220.101.37;
 allow 185.220.101.38;
 allow 185.220.101.39;
+allow 185.220.101.4;
 allow 185.220.101.40;
 allow 185.220.101.41;
 allow 185.220.101.42;
@@ -421,6 +422,7 @@ allow 185.220.101.46;
 allow 185.220.101.47;
 allow 185.220.101.48;
 allow 185.220.101.49;
+allow 185.220.101.5;
 allow 185.220.101.50;
 allow 185.220.101.51;
 allow 185.220.101.52;
@@ -504,7 +506,6 @@ allow 185.246.189.99;
 allow 185.246.84.179;
 allow 185.247.184.105;
 allow 185.247.184.33;
-allow 185.247.226.175;
 allow 185.252.232.218;
 allow 185.254.196.141;
 allow 185.34.33.2;
@@ -530,7 +531,6 @@ allow 185.56.83.83;
 allow 185.82.219.109;
 allow 185.84.31.254;
 allow 188.165.200.97;
-allow 188.214.104.21;
 allow 188.239.191.25;
 allow 188.68.36.28;
 allow 188.68.41.191;
@@ -1225,7 +1225,6 @@ allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a01:7e01::f03c:95ff:fe52:c6f8;
-allow 2a01:e5c0:6e3b::2;
 allow 2a02:16d0:0:5::1;
 allow 2a02:2479:0:6e00::1;
 allow 2a02:2970:1001::4b;
@@ -1309,7 +1308,6 @@ allow 2a06:1700:0:16::1;
 allow 2a06:1700:0:3c::1;
 allow 2a06:1700:0:47::166;
 allow 2a06:1700:0:50::11;
-allow 2a06:1700:2:148::8493:bcd8;
 allow 2a06:1700:3:19::1;
 allow 2a06:1700:3:34::1;
 allow 2a06:1700:4:14::1;
@@ -1344,6 +1342,7 @@ allow 2a0b:f4c0:16c:6::1;
 allow 2a0b:f4c0:16c:7::1;
 allow 2a0b:f4c0:16c:8::1;
 allow 2a0b:f4c0:16c:9::1;
+allow 2a0b:f4c2::;
 allow 2a0b:f4c2::1;
 allow 2a0b:f4c2::10;
 allow 2a0b:f4c2::11;
@@ -1484,6 +1483,7 @@ allow 2a0b:f4c2:3::87;
 allow 2a0b:f4c2:3::88;
 allow 2a0b:f4c2:3::89;
 allow 2a0b:f4c2:3::90;
+allow 2a0b:f4c2::4;
 allow 2a0b:f4c2:4::100;
 allow 2a0b:f4c2:4::101;
 allow 2a0b:f4c2:4::102;
@@ -1499,6 +1499,7 @@ allow 2a0b:f4c2:4::96;
 allow 2a0b:f4c2:4::97;
 allow 2a0b:f4c2:4::98;
 allow 2a0b:f4c2:4::99;
+allow 2a0b:f4c2::5;
 allow 2a0b:f4c2::6;
 allow 2a0b:f4c2::7;
 allow 2a0b:f4c2::8;
@@ -1863,7 +1864,6 @@ allow 71.19.144.106;
 allow 72.14.179.10;
 allow 72.211.49.235;
 allow 72.235.129.116;
-allow 77.221.138.73;
 allow 77.246.98.159;
 allow 77.48.28.239;
 allow 77.81.247.72;
@@ -1904,12 +1904,13 @@ allow 88.80.20.86;
 allow 88.80.26.2;
 allow 88.80.26.3;
 allow 88.80.26.4;
-allow 89.110.95.200;
+allow 89.110.112.209;
 allow 89.147.108.90;
 allow 89.147.110.118;
 allow 89.147.110.154;
 allow 89.147.110.82;
 allow 89.147.111.87;
+allow 89.222.102.137;
 allow 89.234.157.254;
 allow 89.32.41.150;
 allow 89.36.231.128;
