--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -108,7 +108,7 @@ deny 109.70.100.70;
 deny 109.70.100.71;
 deny 113.20.31.38;
 deny 114.35.245.150;
-deny 114.41.31.111;
+deny 114.41.32.58;
 deny 118.163.74.160;
 deny 118.193.64.139;
 deny 118.194.231.50;
@@ -284,7 +284,6 @@ deny 185.154.110.17;
 deny 185.165.169.239;
 deny 185.165.171.84;
 deny 185.170.114.25;
-deny 185.177.151.34;
 deny 185.183.157.214;
 deny 185.183.159.40;
 deny 185.191.204.254;
@@ -309,6 +308,7 @@ deny 185.220.100.252;
 deny 185.220.100.253;
 deny 185.220.100.254;
 deny 185.220.100.255;
+deny 185.220.101.0;
 deny 185.220.101.1;
 deny 185.220.101.10;
 deny 185.220.101.100;
@@ -411,6 +411,7 @@ deny 185.220.101.36;
 deny 185.220.101.37;
 deny 185.220.101.38;
 deny 185.220.101.39;
+deny 185.220.101.4;
 deny 185.220.101.40;
 deny 185.220.101.41;
 deny 185.220.101.42;
@@ -421,6 +422,7 @@ deny 185.220.101.46;
 deny 185.220.101.47;
 deny 185.220.101.48;
 deny 185.220.101.49;
+deny 185.220.101.5;
 deny 185.220.101.50;
 deny 185.220.101.51;
 deny 185.220.101.52;
@@ -504,7 +506,6 @@ deny 185.246.189.99;
 deny 185.246.84.179;
 deny 185.247.184.105;
 deny 185.247.184.33;
-deny 185.247.226.175;
 deny 185.252.232.218;
 deny 185.254.196.141;
 deny 185.34.33.2;
@@ -530,7 +531,6 @@ deny 185.56.83.83;
 deny 185.82.219.109;
 deny 185.84.31.254;
 deny 188.165.200.97;
-deny 188.214.104.21;
 deny 188.239.191.25;
 deny 188.68.36.28;
 deny 188.68.41.191;
@@ -1225,7 +1225,6 @@ deny 2a01:6340:2:501::20;
 deny 2a01:7e00::f03c:91ff:fe56:2656;
 deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a01:7e01::f03c:95ff:fe52:c6f8;
-deny 2a01:e5c0:6e3b::2;
 deny 2a02:16d0:0:5::1;
 deny 2a02:2479:0:6e00::1;
 deny 2a02:2970:1001::4b;
@@ -1309,7 +1308,6 @@ deny 2a06:1700:0:16::1;
 deny 2a06:1700:0:3c::1;
 deny 2a06:1700:0:47::166;
 deny 2a06:1700:0:50::11;
-deny 2a06:1700:2:148::8493:bcd8;
 deny 2a06:1700:3:19::1;
 deny 2a06:1700:3:34::1;
 deny 2a06:1700:4:14::1;
@@ -1344,6 +1342,7 @@ deny 2a0b:f4c0:16c:6::1;
 deny 2a0b:f4c0:16c:7::1;
 deny 2a0b:f4c0:16c:8::1;
 deny 2a0b:f4c0:16c:9::1;
+deny 2a0b:f4c2::;
 deny 2a0b:f4c2::1;
 deny 2a0b:f4c2::10;
 deny 2a0b:f4c2::11;
@@ -1484,6 +1483,7 @@ deny 2a0b:f4c2:3::87;
 deny 2a0b:f4c2:3::88;
 deny 2a0b:f4c2:3::89;
 deny 2a0b:f4c2:3::90;
+deny 2a0b:f4c2::4;
 deny 2a0b:f4c2:4::100;
 deny 2a0b:f4c2:4::101;
 deny 2a0b:f4c2:4::102;
@@ -1499,6 +1499,7 @@ deny 2a0b:f4c2:4::96;
 deny 2a0b:f4c2:4::97;
 deny 2a0b:f4c2:4::98;
 deny 2a0b:f4c2:4::99;
+deny 2a0b:f4c2::5;
 deny 2a0b:f4c2::6;
 deny 2a0b:f4c2::7;
 deny 2a0b:f4c2::8;
@@ -1863,7 +1864,6 @@ deny 71.19.144.106;
 deny 72.14.179.10;
 deny 72.211.49.235;
 deny 72.235.129.116;
-deny 77.221.138.73;
 deny 77.246.98.159;
 deny 77.48.28.239;
 deny 77.81.247.72;
@@ -1904,12 +1904,13 @@ deny 88.80.20.86;
 deny 88.80.26.2;
 deny 88.80.26.3;
 deny 88.80.26.4;
-deny 89.110.95.200;
+deny 89.110.112.209;
 deny 89.147.108.90;
 deny 89.147.110.118;
 deny 89.147.110.154;
 deny 89.147.110.82;
 deny 89.147.111.87;
+deny 89.222.102.137;
 deny 89.234.157.254;
 deny 89.32.41.150;
 deny 89.36.231.128;
