--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -108,7 +108,7 @@ set_real_ip_from 109.70.100.70;
 set_real_ip_from 109.70.100.71;
 set_real_ip_from 113.20.31.38;
 set_real_ip_from 114.35.245.150;
-set_real_ip_from 114.41.31.111;
+set_real_ip_from 114.41.32.58;
 set_real_ip_from 118.163.74.160;
 set_real_ip_from 118.193.64.139;
 set_real_ip_from 118.194.231.50;
@@ -284,7 +284,6 @@ set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.165.169.239;
 set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.170.114.25;
-set_real_ip_from 185.177.151.34;
 set_real_ip_from 185.183.157.214;
 set_real_ip_from 185.183.159.40;
 set_real_ip_from 185.191.204.254;
@@ -309,6 +308,7 @@ set_real_ip_from 185.220.100.252;
 set_real_ip_from 185.220.100.253;
 set_real_ip_from 185.220.100.254;
 set_real_ip_from 185.220.100.255;
+set_real_ip_from 185.220.101.0;
 set_real_ip_from 185.220.101.1;
 set_real_ip_from 185.220.101.10;
 set_real_ip_from 185.220.101.100;
@@ -411,6 +411,7 @@ set_real_ip_from 185.220.101.36;
 set_real_ip_from 185.220.101.37;
 set_real_ip_from 185.220.101.38;
 set_real_ip_from 185.220.101.39;
+set_real_ip_from 185.220.101.4;
 set_real_ip_from 185.220.101.40;
 set_real_ip_from 185.220.101.41;
 set_real_ip_from 185.220.101.42;
@@ -421,6 +422,7 @@ set_real_ip_from 185.220.101.46;
 set_real_ip_from 185.220.101.47;
 set_real_ip_from 185.220.101.48;
 set_real_ip_from 185.220.101.49;
+set_real_ip_from 185.220.101.5;
 set_real_ip_from 185.220.101.50;
 set_real_ip_from 185.220.101.51;
 set_real_ip_from 185.220.101.52;
@@ -504,7 +506,6 @@ set_real_ip_from 185.246.189.99;
 set_real_ip_from 185.246.84.179;
 set_real_ip_from 185.247.184.105;
 set_real_ip_from 185.247.184.33;
-set_real_ip_from 185.247.226.175;
 set_real_ip_from 185.252.232.218;
 set_real_ip_from 185.254.196.141;
 set_real_ip_from 185.34.33.2;
@@ -530,7 +531,6 @@ set_real_ip_from 185.56.83.83;
 set_real_ip_from 185.82.219.109;
 set_real_ip_from 185.84.31.254;
 set_real_ip_from 188.165.200.97;
-set_real_ip_from 188.214.104.21;
 set_real_ip_from 188.239.191.25;
 set_real_ip_from 188.68.36.28;
 set_real_ip_from 188.68.41.191;
@@ -1225,7 +1225,6 @@ set_real_ip_from 2a01:6340:2:501::20;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe56:2656;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
 set_real_ip_from 2a01:7e01::f03c:95ff:fe52:c6f8;
-set_real_ip_from 2a01:e5c0:6e3b::2;
 set_real_ip_from 2a02:16d0:0:5::1;
 set_real_ip_from 2a02:2479:0:6e00::1;
 set_real_ip_from 2a02:2970:1001::4b;
@@ -1309,7 +1308,6 @@ set_real_ip_from 2a06:1700:0:16::1;
 set_real_ip_from 2a06:1700:0:3c::1;
 set_real_ip_from 2a06:1700:0:47::166;
 set_real_ip_from 2a06:1700:0:50::11;
-set_real_ip_from 2a06:1700:2:148::8493:bcd8;
 set_real_ip_from 2a06:1700:3:19::1;
 set_real_ip_from 2a06:1700:3:34::1;
 set_real_ip_from 2a06:1700:4:14::1;
@@ -1344,6 +1342,7 @@ set_real_ip_from 2a0b:f4c0:16c:6::1;
 set_real_ip_from 2a0b:f4c0:16c:7::1;
 set_real_ip_from 2a0b:f4c0:16c:8::1;
 set_real_ip_from 2a0b:f4c0:16c:9::1;
+set_real_ip_from 2a0b:f4c2::;
 set_real_ip_from 2a0b:f4c2::1;
 set_real_ip_from 2a0b:f4c2::10;
 set_real_ip_from 2a0b:f4c2::11;
@@ -1484,6 +1483,7 @@ set_real_ip_from 2a0b:f4c2:3::87;
 set_real_ip_from 2a0b:f4c2:3::88;
 set_real_ip_from 2a0b:f4c2:3::89;
 set_real_ip_from 2a0b:f4c2:3::90;
+set_real_ip_from 2a0b:f4c2::4;
 set_real_ip_from 2a0b:f4c2:4::100;
 set_real_ip_from 2a0b:f4c2:4::101;
 set_real_ip_from 2a0b:f4c2:4::102;
@@ -1499,6 +1499,7 @@ set_real_ip_from 2a0b:f4c2:4::96;
 set_real_ip_from 2a0b:f4c2:4::97;
 set_real_ip_from 2a0b:f4c2:4::98;
 set_real_ip_from 2a0b:f4c2:4::99;
+set_real_ip_from 2a0b:f4c2::5;
 set_real_ip_from 2a0b:f4c2::6;
 set_real_ip_from 2a0b:f4c2::7;
 set_real_ip_from 2a0b:f4c2::8;
@@ -1863,7 +1864,6 @@ set_real_ip_from 71.19.144.106;
 set_real_ip_from 72.14.179.10;
 set_real_ip_from 72.211.49.235;
 set_real_ip_from 72.235.129.116;
-set_real_ip_from 77.221.138.73;
 set_real_ip_from 77.246.98.159;
 set_real_ip_from 77.48.28.239;
 set_real_ip_from 77.81.247.72;
@@ -1904,12 +1904,13 @@ set_real_ip_from 88.80.20.86;
 set_real_ip_from 88.80.26.2;
 set_real_ip_from 88.80.26.3;
 set_real_ip_from 88.80.26.4;
-set_real_ip_from 89.110.95.200;
+set_real_ip_from 89.110.112.209;
 set_real_ip_from 89.147.108.90;
 set_real_ip_from 89.147.110.118;
 set_real_ip_from 89.147.110.154;
 set_real_ip_from 89.147.110.82;
 set_real_ip_from 89.147.111.87;
+set_real_ip_from 89.222.102.137;
 set_real_ip_from 89.234.157.254;
 set_real_ip_from 89.32.41.150;
 set_real_ip_from 89.36.231.128;
