--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -350,7 +350,6 @@ set_real_ip_from 2a01:6340:2:501::20;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe56:2656;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
 set_real_ip_from 2a01:7e01::f03c:95ff:fe52:c6f8;
-set_real_ip_from 2a01:e5c0:6e3b::2;
 set_real_ip_from 2a02:16d0:0:5::1;
 set_real_ip_from 2a02:2479:0:6e00::1;
 set_real_ip_from 2a02:2970:1001::4b;
@@ -434,7 +433,6 @@ set_real_ip_from 2a06:1700:0:16::1;
 set_real_ip_from 2a06:1700:0:3c::1;
 set_real_ip_from 2a06:1700:0:47::166;
 set_real_ip_from 2a06:1700:0:50::11;
-set_real_ip_from 2a06:1700:2:148::8493:bcd8;
 set_real_ip_from 2a06:1700:3:19::1;
 set_real_ip_from 2a06:1700:3:34::1;
 set_real_ip_from 2a06:1700:4:14::1;
@@ -469,6 +467,7 @@ set_real_ip_from 2a0b:f4c0:16c:6::1;
 set_real_ip_from 2a0b:f4c0:16c:7::1;
 set_real_ip_from 2a0b:f4c0:16c:8::1;
 set_real_ip_from 2a0b:f4c0:16c:9::1;
+set_real_ip_from 2a0b:f4c2::;
 set_real_ip_from 2a0b:f4c2::1;
 set_real_ip_from 2a0b:f4c2::10;
 set_real_ip_from 2a0b:f4c2::11;
@@ -609,6 +608,7 @@ set_real_ip_from 2a0b:f4c2:3::87;
 set_real_ip_from 2a0b:f4c2:3::88;
 set_real_ip_from 2a0b:f4c2:3::89;
 set_real_ip_from 2a0b:f4c2:3::90;
+set_real_ip_from 2a0b:f4c2::4;
 set_real_ip_from 2a0b:f4c2:4::100;
 set_real_ip_from 2a0b:f4c2:4::101;
 set_real_ip_from 2a0b:f4c2:4::102;
@@ -624,6 +624,7 @@ set_real_ip_from 2a0b:f4c2:4::96;
 set_real_ip_from 2a0b:f4c2:4::97;
 set_real_ip_from 2a0b:f4c2:4::98;
 set_real_ip_from 2a0b:f4c2:4::99;
+set_real_ip_from 2a0b:f4c2::5;
 set_real_ip_from 2a0b:f4c2::6;
 set_real_ip_from 2a0b:f4c2::7;
 set_real_ip_from 2a0b:f4c2::8;
