Update lists at 20250510-0600

--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -107,7 +107,6 @@ deny 109.70.100.70;
 deny 109.70.100.71;
 deny 113.20.31.38;
 deny 114.35.245.150;
-deny 114.41.3.140;
 deny 118.163.74.160;
 deny 118.193.64.139;
 deny 118.194.231.50;
@@ -946,6 +945,7 @@ deny 23.151.8.8;
 deny 23.153.248.33;
 deny 23.153.248.34;
 deny 23.155.8.104;
+deny 23.184.48.13;
 deny 23.184.48.78;
 deny 23.191.200.10;
 deny 23.191.200.11;
@@ -1010,6 +1010,7 @@ deny 2602:fc24:10:61b::1;
 deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:12:9fef::1;
 deny 2602:fc24:12:a679::1;
+deny 2602:fc24:18:a378::1;
 deny 2602:fc24:18:f38f::1;
 deny 2602:fc24:19:524::1;
 deny 2602:fc24:19:eb06::dead;
@@ -1660,7 +1661,6 @@ deny 2c0f:6c0:0:4::95ea;
 deny 31.129.22.65;
 deny 31.133.0.210;
 deny 31.184.236.104;
-deny 31.220.75.237;
 deny 31.44.238.25;
 deny 35.0.127.52;
 deny 37.120.239.59;
@@ -1671,6 +1671,7 @@ deny 37.228.129.63;
 deny 37.48.120.196;
 deny 37.48.70.156;
 deny 37.77.56.238;
+deny 38.242.254.131;
 deny 38.97.116.242;
 deny 38.97.116.243;
 deny 38.97.116.244;
@@ -1874,6 +1875,7 @@ deny 80.241.60.207;
 deny 80.67.167.81;
 deny 80.67.172.162;
 deny 80.82.78.14;
+deny 80.85.246.128;
 deny 80.94.92.106;
 deny 80.94.92.92;
 deny 81.16.33.42;
