Update lists at 20250510-0900

--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -171,6 +171,7 @@ allow 2605:6400:30:ed0c:b477:4972:756a:2f42;
 allow 2605:6400:30:edc3::34;
 allow 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 allow 2605:6400:30:efba:dead::;
+allow 2605:6400:30:f04d:2605:6400:30:30;
 allow 2605:6400:30:f05d:c272:5525:72b1:e64c;
 allow 2605:6400:30:f060:be62:b857:b818:9144;
 allow 2605:6400:30:f08c:45b7:4a99:a154:694e;
@@ -472,6 +473,7 @@ allow 2a0b:f4c2::;
 allow 2a0b:f4c2::1;
 allow 2a0b:f4c2::10;
 allow 2a0b:f4c2::11;
+allow 2a0b:f4c2:1::128;
 allow 2a0b:f4c2:1::129;
 allow 2a0b:f4c2:1::130;
 allow 2a0b:f4c2:1::132;
@@ -480,6 +482,7 @@ allow 2a0b:f4c2:1::134;
 allow 2a0b:f4c2:1::135;
 allow 2a0b:f4c2:1::137;
 allow 2a0b:f4c2:1::138;
+allow 2a0b:f4c2:1::139;
 allow 2a0b:f4c2:1::140;
 allow 2a0b:f4c2:1::141;
 allow 2a0b:f4c2:1::142;
@@ -519,6 +522,7 @@ allow 2a0b:f4c2:1::175;
 allow 2a0b:f4c2:1::177;
 allow 2a0b:f4c2:1::178;
 allow 2a0b:f4c2:1::179;
+allow 2a0b:f4c2:1::181;
 allow 2a0b:f4c2:1::182;
 allow 2a0b:f4c2:1::183;
 allow 2a0b:f4c2:1::184;
@@ -526,6 +530,7 @@ allow 2a0b:f4c2:1::185;
 allow 2a0b:f4c2:1::186;
 allow 2a0b:f4c2:1::187;
 allow 2a0b:f4c2:1::188;
+allow 2a0b:f4c2:1::189;
 allow 2a0b:f4c2:1::190;
 allow 2a0b:f4c2:1::191;
 allow 2a0b:f4c2::12;
