--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -73,6 +73,7 @@ set_real_ip_from 107.189.4.12;
 set_real_ip_from 107.189.4.209;
 set_real_ip_from 107.189.5.121;
 set_real_ip_from 107.189.5.188;
+set_real_ip_from 107.189.5.249;
 set_real_ip_from 107.189.5.7;
 set_real_ip_from 107.189.6.124;
 set_real_ip_from 107.189.7.141;
@@ -120,7 +121,6 @@ set_real_ip_from 128.127.180.156;
 set_real_ip_from 128.31.0.13;
 set_real_ip_from 130.193.10.21;
 set_real_ip_from 130.193.15.186;
-set_real_ip_from 130.193.15.79;
 set_real_ip_from 13.126.29.181;
 set_real_ip_from 135.125.239.70;
 set_real_ip_from 136.175.8.45;
@@ -323,6 +323,7 @@ set_real_ip_from 185.220.101.109;
 set_real_ip_from 185.220.101.11;
 set_real_ip_from 185.220.101.110;
 set_real_ip_from 185.220.101.12;
+set_real_ip_from 185.220.101.128;
 set_real_ip_from 185.220.101.129;
 set_real_ip_from 185.220.101.13;
 set_real_ip_from 185.220.101.130;
@@ -334,6 +335,7 @@ set_real_ip_from 185.220.101.135;
 set_real_ip_from 185.220.101.136;
 set_real_ip_from 185.220.101.137;
 set_real_ip_from 185.220.101.138;
+set_real_ip_from 185.220.101.139;
 set_real_ip_from 185.220.101.14;
 set_real_ip_from 185.220.101.140;
 set_real_ip_from 185.220.101.141;
@@ -378,6 +380,7 @@ set_real_ip_from 185.220.101.177;
 set_real_ip_from 185.220.101.178;
 set_real_ip_from 185.220.101.179;
 set_real_ip_from 185.220.101.18;
+set_real_ip_from 185.220.101.181;
 set_real_ip_from 185.220.101.182;
 set_real_ip_from 185.220.101.183;
 set_real_ip_from 185.220.101.184;
@@ -385,6 +388,7 @@ set_real_ip_from 185.220.101.185;
 set_real_ip_from 185.220.101.186;
 set_real_ip_from 185.220.101.187;
 set_real_ip_from 185.220.101.188;
+set_real_ip_from 185.220.101.189;
 set_real_ip_from 185.220.101.19;
 set_real_ip_from 185.220.101.190;
 set_real_ip_from 185.220.101.191;
@@ -1045,6 +1049,7 @@ set_real_ip_from 2605:6400:30:ed0c:b477:4972:756a:2f42;
 set_real_ip_from 2605:6400:30:edc3::34;
 set_real_ip_from 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 set_real_ip_from 2605:6400:30:efba:dead::;
+set_real_ip_from 2605:6400:30:f04d:2605:6400:30:30;
 set_real_ip_from 2605:6400:30:f05d:c272:5525:72b1:e64c;
 set_real_ip_from 2605:6400:30:f060:be62:b857:b818:9144;
 set_real_ip_from 2605:6400:30:f08c:45b7:4a99:a154:694e;
@@ -1347,6 +1352,7 @@ set_real_ip_from 2a0b:f4c2::;
 set_real_ip_from 2a0b:f4c2::1;
 set_real_ip_from 2a0b:f4c2::10;
 set_real_ip_from 2a0b:f4c2::11;
+set_real_ip_from 2a0b:f4c2:1::128;
 set_real_ip_from 2a0b:f4c2:1::129;
 set_real_ip_from 2a0b:f4c2:1::130;
 set_real_ip_from 2a0b:f4c2:1::132;
@@ -1355,6 +1361,7 @@ set_real_ip_from 2a0b:f4c2:1::134;
 set_real_ip_from 2a0b:f4c2:1::135;
 set_real_ip_from 2a0b:f4c2:1::137;
 set_real_ip_from 2a0b:f4c2:1::138;
+set_real_ip_from 2a0b:f4c2:1::139;
 set_real_ip_from 2a0b:f4c2:1::140;
 set_real_ip_from 2a0b:f4c2:1::141;
 set_real_ip_from 2a0b:f4c2:1::142;
@@ -1394,6 +1401,7 @@ set_real_ip_from 2a0b:f4c2:1::175;
 set_real_ip_from 2a0b:f4c2:1::177;
 set_real_ip_from 2a0b:f4c2:1::178;
 set_real_ip_from 2a0b:f4c2:1::179;
+set_real_ip_from 2a0b:f4c2:1::181;
 set_real_ip_from 2a0b:f4c2:1::182;
 set_real_ip_from 2a0b:f4c2:1::183;
 set_real_ip_from 2a0b:f4c2:1::184;
@@ -1401,6 +1409,7 @@ set_real_ip_from 2a0b:f4c2:1::185;
 set_real_ip_from 2a0b:f4c2:1::186;
 set_real_ip_from 2a0b:f4c2:1::187;
 set_real_ip_from 2a0b:f4c2:1::188;
+set_real_ip_from 2a0b:f4c2:1::189;
 set_real_ip_from 2a0b:f4c2:1::190;
 set_real_ip_from 2a0b:f4c2:1::191;
 set_real_ip_from 2a0b:f4c2::12;
@@ -1871,6 +1880,7 @@ set_real_ip_from 77.48.28.239;
 set_real_ip_from 77.81.247.72;
 set_real_ip_from 78.142.18.219;
 set_real_ip_from 79.100.235.29;
+set_real_ip_from 80.125.71.115;
 set_real_ip_from 80.241.60.207;
 set_real_ip_from 80.67.167.81;
 set_real_ip_from 80.67.172.162;
@@ -1907,6 +1917,7 @@ set_real_ip_from 88.80.20.86;
 set_real_ip_from 88.80.26.2;
 set_real_ip_from 88.80.26.3;
 set_real_ip_from 88.80.26.4;
+set_real_ip_from 89.110.95.200;
 set_real_ip_from 89.147.108.90;
 set_real_ip_from 89.147.110.118;
 set_real_ip_from 89.147.110.154;
