--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -106,6 +106,9 @@ allow 109.70.100.68;
 allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
+allow 109.71.252.182;
+allow 109.71.252.88;
+allow 109.71.252.97;
 allow 113.20.31.38;
 allow 114.35.245.150;
 allow 118.163.74.160;
@@ -199,6 +202,7 @@ allow 173.237.206.68;
 allow 173.255.198.243;
 allow 176.118.193.33;
 allow 176.58.100.98;
+allow 176.58.121.177;
 allow 176.65.148.133;
 allow 176.65.148.3;
 allow 176.65.149.100;
@@ -284,6 +288,7 @@ allow 185.170.114.25;
 allow 185.183.157.214;
 allow 185.183.159.40;
 allow 185.191.204.254;
+allow 185.193.127.76;
 allow 185.193.52.180;
 allow 185.195.236.55;
 allow 185.195.71.244;
@@ -301,10 +306,6 @@ allow 185.220.100.248;
 allow 185.220.100.249;
 allow 185.220.100.250;
 allow 185.220.100.251;
-allow 185.220.100.252;
-allow 185.220.100.253;
-allow 185.220.100.254;
-allow 185.220.100.255;
 allow 185.220.101.0;
 allow 185.220.101.1;
 allow 185.220.101.10;
@@ -1226,6 +1227,7 @@ allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
 allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
+allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a01:7e01::f03c:95ff:fe52:c6f8;
 allow 2a02:16d0:0:5::1;
 allow 2a02:2970:1001::4b;
@@ -1281,6 +1283,8 @@ allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:78fc::1;
+allow 2a04:52c0:105:d7eb::1;
+allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
@@ -1324,20 +1328,17 @@ allow 2a09:61c0::21;
 allow 2a09:61c0::22;
 allow 2a09:61c0::beef;
 allow 2a09:b280:fe01:61::a;
+allow 2a0a:3840:1337:127:0:b9c1:7f4c:1337;
 allow 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 allow 2a0b:64c0:f802:1::a;
 allow 2a0b:64c0:f802:4c::a;
 allow 2a0b:f4c0:16c:10::1;
-allow 2a0b:f4c0:16c:1::1;
 allow 2a0b:f4c0:16c:11::1;
 allow 2a0b:f4c0:16c:12::1;
 allow 2a0b:f4c0:16c:13::1;
 allow 2a0b:f4c0:16c:14::1;
 allow 2a0b:f4c0:16c:15::1;
 allow 2a0b:f4c0:16c:16::1;
-allow 2a0b:f4c0:16c:2::1;
-allow 2a0b:f4c0:16c:3::1;
-allow 2a0b:f4c0:16c:4::1;
 allow 2a0b:f4c0:16c:5::1;
 allow 2a0b:f4c0:16c:6::1;
 allow 2a0b:f4c0:16c:7::1;
@@ -1559,6 +1560,7 @@ allow 2a0e:4005:1002:ffff:185:40:4:38;
 allow 2a0e:4005:1002:ffff:185:40:4:44;
 allow 2a0e:4005:1002:ffff:185:40:4:64;
 allow 2a0e:4005:1002:ffff:185:40:4:92;
+allow 2a0e:97c0:470::30;
 allow 2a0e:b107:dd0::3:fa35:9316;
 allow 2a0e:bfc0:0:11::796d;
 allow 2a0e:bfc0:0:13::67bc;
@@ -1665,7 +1667,6 @@ allow 2c0f:6c0:0:4::95ea;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.184.236.104;
-allow 31.220.75.237;
 allow 31.44.238.25;
 allow 35.0.127.52;
 allow 37.120.239.59;
@@ -1676,6 +1677,7 @@ allow 37.228.129.63;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 37.77.56.238;
+allow 38.242.254.131;
 allow 38.97.116.242;
 allow 38.97.116.243;
 allow 38.97.116.244;
@@ -1816,6 +1818,8 @@ allow 51.81.222.62;
 allow 5.181.80.107;
 allow 5.196.95.34;
 allow 5.255.100.219;
+allow 5.255.100.26;
+allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
 allow 5.255.104.202;
@@ -1947,6 +1951,7 @@ allow 92.246.84.133;
 allow 93.123.109.116;
 allow 93.123.12.112;
 allow 93.185.165.211;
+allow 93.90.74.29;
 allow 93.95.227.37;
 allow 93.95.228.125;
 allow 93.95.228.205;
