--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -350,6 +350,7 @@ set_real_ip_from 2a01:5e0:36:cf2a::1;
 set_real_ip_from 2a01:6340:2:501::10;
 set_real_ip_from 2a01:6340:2:501::20;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe56:2656;
+set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
 set_real_ip_from 2a01:7e01::f03c:95ff:fe52:c6f8;
 set_real_ip_from 2a02:16d0:0:5::1;
 set_real_ip_from 2a02:2970:1001::4b;
@@ -405,6 +406,8 @@ set_real_ip_from 2a04:52c0:104:31e6::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
 set_real_ip_from 2a04:52c0:105:78fc::1;
+set_real_ip_from 2a04:52c0:105:d7eb::1;
+set_real_ip_from 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 set_real_ip_from 2a04:52c0:106:d219::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
 set_real_ip_from 2a04:52c0:116:e0e3::1;
@@ -448,20 +451,17 @@ set_real_ip_from 2a09:61c0::21;
 set_real_ip_from 2a09:61c0::22;
 set_real_ip_from 2a09:61c0::beef;
 set_real_ip_from 2a09:b280:fe01:61::a;
+set_real_ip_from 2a0a:3840:1337:127:0:b9c1:7f4c:1337;
 set_real_ip_from 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 set_real_ip_from 2a0b:64c0:f802:1::a;
 set_real_ip_from 2a0b:64c0:f802:4c::a;
 set_real_ip_from 2a0b:f4c0:16c:10::1;
-set_real_ip_from 2a0b:f4c0:16c:1::1;
 set_real_ip_from 2a0b:f4c0:16c:11::1;
 set_real_ip_from 2a0b:f4c0:16c:12::1;
 set_real_ip_from 2a0b:f4c0:16c:13::1;
 set_real_ip_from 2a0b:f4c0:16c:14::1;
 set_real_ip_from 2a0b:f4c0:16c:15::1;
 set_real_ip_from 2a0b:f4c0:16c:16::1;
-set_real_ip_from 2a0b:f4c0:16c:2::1;
-set_real_ip_from 2a0b:f4c0:16c:3::1;
-set_real_ip_from 2a0b:f4c0:16c:4::1;
 set_real_ip_from 2a0b:f4c0:16c:5::1;
 set_real_ip_from 2a0b:f4c0:16c:6::1;
 set_real_ip_from 2a0b:f4c0:16c:7::1;
@@ -683,6 +683,7 @@ set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:38;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:44;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:64;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:92;
+set_real_ip_from 2a0e:97c0:470::30;
 set_real_ip_from 2a0e:b107:dd0::3:fa35:9316;
 set_real_ip_from 2a0e:bfc0:0:11::796d;
 set_real_ip_from 2a0e:bfc0:0:13::67bc;
