Update lists at 20250511-0600

--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -695,7 +695,6 @@ allow 2a0e:bfc2:0:2c::1;
 allow 2a0e:bfc7:0:3::2d83;
 allow 2a0e:bfc7:0:4::6e7a;
 allow 2a0e:e701:1198::1;
-allow 2a0f:7803:fac2:ab6d::1;
 allow 2a0f:7803:fac5:cd0::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:85c1:356:424c::1;
@@ -786,4 +785,6 @@ allow 2a12:a800:9:1:193:26:115:61;
 allow 2a14:3f87:6920::126;
 allow 2a14:3f87:6920::5b;
 allow 2a14:3f87:f001:30::a;
+allow 2c0f:6c0:0:2::6983;
+allow 2c0f:6c0:0:3::479d;
 allow 2c0f:6c0:0:4::95ea;
