--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -124,6 +124,7 @@ allow 128.127.180.156;
 allow 128.31.0.13;
 allow 130.193.10.21;
 allow 130.193.15.186;
+allow 130.193.15.79;
 allow 13.126.29.181;
 allow 135.125.239.70;
 allow 136.175.8.45;
@@ -141,6 +142,7 @@ allow 144.172.118.41;
 allow 144.172.118.73;
 allow 146.59.126.232;
 allow 146.59.231.4;
+allow 147.45.116.145;
 allow 148.113.152.91;
 allow 149.202.79.129;
 allow 149.56.22.133;
@@ -153,7 +155,6 @@ allow 152.53.53.243;
 allow 154.16.116.61;
 allow 154.41.95.1;
 allow 154.41.95.2;
-allow 154.83.88.219;
 allow 158.69.252.116;
 allow 160.119.249.240;
 allow 161.129.68.162;
@@ -1572,7 +1573,6 @@ allow 2a0e:bfc2:0:2c::1;
 allow 2a0e:bfc7:0:3::2d83;
 allow 2a0e:bfc7:0:4::6e7a;
 allow 2a0e:e701:1198::1;
-allow 2a0f:7803:fac2:ab6d::1;
 allow 2a0f:7803:fac5:cd0::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:85c1:356:424c::1;
@@ -1663,12 +1663,15 @@ allow 2a12:a800:9:1:193:26:115:61;
 allow 2a14:3f87:6920::126;
 allow 2a14:3f87:6920::5b;
 allow 2a14:3f87:f001:30::a;
+allow 2c0f:6c0:0:2::6983;
+allow 2c0f:6c0:0:3::479d;
 allow 2c0f:6c0:0:4::95ea;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.184.236.104;
 allow 31.44.238.25;
 allow 35.0.127.52;
+allow 37.114.63.5;
 allow 37.120.239.59;
 allow 37.187.5.192;
 allow 37.221.208.71;
@@ -1686,6 +1689,8 @@ allow 45.11.59.28;
 allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.132.246.245;
+allow 45.13.225.69;
+allow 45.13.225.78;
 allow 45.133.74.53;
 allow 45.134.225.36;
 allow 45.137.99.10;
