--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -124,6 +124,7 @@ deny 128.127.180.156;
 deny 128.31.0.13;
 deny 130.193.10.21;
 deny 130.193.15.186;
+deny 130.193.15.79;
 deny 13.126.29.181;
 deny 135.125.239.70;
 deny 136.175.8.45;
@@ -141,6 +142,7 @@ deny 144.172.118.41;
 deny 144.172.118.73;
 deny 146.59.126.232;
 deny 146.59.231.4;
+deny 147.45.116.145;
 deny 148.113.152.91;
 deny 149.202.79.129;
 deny 149.56.22.133;
@@ -153,7 +155,6 @@ deny 152.53.53.243;
 deny 154.16.116.61;
 deny 154.41.95.1;
 deny 154.41.95.2;
-deny 154.83.88.219;
 deny 158.69.252.116;
 deny 160.119.249.240;
 deny 161.129.68.162;
@@ -1572,7 +1573,6 @@ deny 2a0e:bfc2:0:2c::1;
 deny 2a0e:bfc7:0:3::2d83;
 deny 2a0e:bfc7:0:4::6e7a;
 deny 2a0e:e701:1198::1;
-deny 2a0f:7803:fac2:ab6d::1;
 deny 2a0f:7803:fac5:cd0::1;
 deny 2a0f:85c1:356:3238::1;
 deny 2a0f:85c1:356:424c::1;
@@ -1663,12 +1663,15 @@ deny 2a12:a800:9:1:193:26:115:61;
 deny 2a14:3f87:6920::126;
 deny 2a14:3f87:6920::5b;
 deny 2a14:3f87:f001:30::a;
+deny 2c0f:6c0:0:2::6983;
+deny 2c0f:6c0:0:3::479d;
 deny 2c0f:6c0:0:4::95ea;
 deny 31.129.22.65;
 deny 31.133.0.210;
 deny 31.184.236.104;
 deny 31.44.238.25;
 deny 35.0.127.52;
+deny 37.114.63.5;
 deny 37.120.239.59;
 deny 37.187.5.192;
 deny 37.221.208.71;
@@ -1686,6 +1689,8 @@ deny 45.11.59.28;
 deny 45.12.3.80;
 deny 45.128.133.242;
 deny 45.132.246.245;
+deny 45.13.225.69;
+deny 45.13.225.78;
 deny 45.133.74.53;
 deny 45.134.225.36;
 deny 45.137.99.10;
