--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -124,6 +124,7 @@ set_real_ip_from 128.127.180.156;
 set_real_ip_from 128.31.0.13;
 set_real_ip_from 130.193.10.21;
 set_real_ip_from 130.193.15.186;
+set_real_ip_from 130.193.15.79;
 set_real_ip_from 13.126.29.181;
 set_real_ip_from 135.125.239.70;
 set_real_ip_from 136.175.8.45;
@@ -141,6 +142,7 @@ set_real_ip_from 144.172.118.41;
 set_real_ip_from 144.172.118.73;
 set_real_ip_from 146.59.126.232;
 set_real_ip_from 146.59.231.4;
+set_real_ip_from 147.45.116.145;
 set_real_ip_from 148.113.152.91;
 set_real_ip_from 149.202.79.129;
 set_real_ip_from 149.56.22.133;
@@ -153,7 +155,6 @@ set_real_ip_from 152.53.53.243;
 set_real_ip_from 154.16.116.61;
 set_real_ip_from 154.41.95.1;
 set_real_ip_from 154.41.95.2;
-set_real_ip_from 154.83.88.219;
 set_real_ip_from 158.69.252.116;
 set_real_ip_from 160.119.249.240;
 set_real_ip_from 161.129.68.162;
@@ -1572,7 +1573,6 @@ set_real_ip_from 2a0e:bfc2:0:2c::1;
 set_real_ip_from 2a0e:bfc7:0:3::2d83;
 set_real_ip_from 2a0e:bfc7:0:4::6e7a;
 set_real_ip_from 2a0e:e701:1198::1;
-set_real_ip_from 2a0f:7803:fac2:ab6d::1;
 set_real_ip_from 2a0f:7803:fac5:cd0::1;
 set_real_ip_from 2a0f:85c1:356:3238::1;
 set_real_ip_from 2a0f:85c1:356:424c::1;
@@ -1663,12 +1663,15 @@ set_real_ip_from 2a12:a800:9:1:193:26:115:61;
 set_real_ip_from 2a14:3f87:6920::126;
 set_real_ip_from 2a14:3f87:6920::5b;
 set_real_ip_from 2a14:3f87:f001:30::a;
+set_real_ip_from 2c0f:6c0:0:2::6983;
+set_real_ip_from 2c0f:6c0:0:3::479d;
 set_real_ip_from 2c0f:6c0:0:4::95ea;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.184.236.104;
 set_real_ip_from 31.44.238.25;
 set_real_ip_from 35.0.127.52;
+set_real_ip_from 37.114.63.5;
 set_real_ip_from 37.120.239.59;
 set_real_ip_from 37.187.5.192;
 set_real_ip_from 37.221.208.71;
@@ -1686,6 +1689,8 @@ set_real_ip_from 45.11.59.28;
 set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.133.242;
 set_real_ip_from 45.132.246.245;
+set_real_ip_from 45.13.225.69;
+set_real_ip_from 45.13.225.78;
 set_real_ip_from 45.133.74.53;
 set_real_ip_from 45.134.225.36;
 set_real_ip_from 45.137.99.10;
