Update lists at 20250511-0900

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -155,6 +155,7 @@ allow 152.53.53.243;
 allow 154.16.116.61;
 allow 154.41.95.1;
 allow 154.41.95.2;
+allow 154.83.88.219;
 allow 158.69.252.116;
 allow 160.119.249.240;
 allow 161.129.68.162;
@@ -262,6 +263,7 @@ allow 185.112.146.168;
 allow 185.113.128.30;
 allow 185.120.16.171;
 allow 185.120.16.176;
+allow 185.126.115.146;
 allow 185.129.61.1;
 allow 185.129.61.10;
 allow 185.129.61.129;
@@ -1573,6 +1575,7 @@ allow 2a0e:bfc2:0:2c::1;
 allow 2a0e:bfc7:0:3::2d83;
 allow 2a0e:bfc7:0:4::6e7a;
 allow 2a0e:e701:1198::1;
+allow 2a0f:7803:fac2:ab6d::1;
 allow 2a0f:7803:fac5:cd0::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:85c1:356:424c::1;
@@ -1921,6 +1924,7 @@ allow 88.80.20.86;
 allow 88.80.26.2;
 allow 88.80.26.3;
 allow 88.80.26.4;
+allow 89.110.95.200;
 allow 89.147.108.90;
 allow 89.147.110.118;
 allow 89.147.110.154;
