--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -155,6 +155,7 @@ deny 152.53.53.243;
 deny 154.16.116.61;
 deny 154.41.95.1;
 deny 154.41.95.2;
+deny 154.83.88.219;
 deny 158.69.252.116;
 deny 160.119.249.240;
 deny 161.129.68.162;
@@ -262,6 +263,7 @@ deny 185.112.146.168;
 deny 185.113.128.30;
 deny 185.120.16.171;
 deny 185.120.16.176;
+deny 185.126.115.146;
 deny 185.129.61.1;
 deny 185.129.61.10;
 deny 185.129.61.129;
@@ -1573,6 +1575,7 @@ deny 2a0e:bfc2:0:2c::1;
 deny 2a0e:bfc7:0:3::2d83;
 deny 2a0e:bfc7:0:4::6e7a;
 deny 2a0e:e701:1198::1;
+deny 2a0f:7803:fac2:ab6d::1;
 deny 2a0f:7803:fac5:cd0::1;
 deny 2a0f:85c1:356:3238::1;
 deny 2a0f:85c1:356:424c::1;
@@ -1921,6 +1924,7 @@ deny 88.80.20.86;
 deny 88.80.26.2;
 deny 88.80.26.3;
 deny 88.80.26.4;
+deny 89.110.95.200;
 deny 89.147.108.90;
 deny 89.147.110.118;
 deny 89.147.110.154;
