--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -693,6 +693,7 @@ deny 2a0e:bfc2:0:2c::1;
 deny 2a0e:bfc7:0:3::2d83;
 deny 2a0e:bfc7:0:4::6e7a;
 deny 2a0e:e701:1198::1;
+deny 2a0f:7803:fac2:ab6d::1;
 deny 2a0f:7803:fac5:cd0::1;
 deny 2a0f:85c1:356:3238::1;
 deny 2a0f:85c1:356:424c::1;
