--- a/allow-tor_ips_v4.conf
+++ b/allow-tor_ips_v4.conf
@@ -1110,6 +1110,7 @@ allow 8.209.106.19;
 allow 82.221.128.191;
 allow 82.221.131.5;
 allow 82.221.139.190;
+allow 82.68.49.227;
 allow 83.217.9.73;
 allow 83.96.213.63;
 allow 83.97.20.77;
