--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -121,6 +121,7 @@ deny 2402:1f00:8000:239::;
 deny 2402:1f00:8100:400::9;
 deny 2407:3640:2207:8882::1;
 deny 2407:3640:2259:6302::1;
+deny 2407:3641:2259:8208::1;
 deny 2600:3c00::f03c:91ff:fe73:f9ba;
 deny 2600:3c00::f03c:91ff:fe96:1cd9;
 deny 2600:3c00::f03c:95ff:fe5d:8f00;
@@ -353,6 +354,8 @@ deny 2a01:7e00::f03c:91ff:fe56:2656;
 deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a01:7e01::f03c:95ff:fe52:c6f8;
 deny 2a02:16d0:0:5::1;
+deny 2a02:2479:0:6e00::1;
+deny 2a02:2970:1001::4b;
 deny 2a02:418:6017::147;
 deny 2a02:418:6017::148;
 deny 2a02:8010:677e:f9d0:215:5dff:fe01:210c;
