--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -627,6 +627,7 @@ allow 193.239.232.102;
 allow 193.26.115.212;
 allow 193.26.115.43;
 allow 193.26.115.61;
+allow 193.32.162.104;
 allow 193.32.162.96;
 allow 193.36.132.21;
 allow 194.15.112.133;
@@ -939,7 +940,6 @@ allow 216.239.90.19;
 allow 216.73.159.101;
 allow 216.73.159.75;
 allow 217.12.221.131;
-allow 217.154.21.121;
 allow 217.199.199.250;
 allow 23.137.248.100;
 allow 23.137.248.192;
@@ -1235,7 +1235,6 @@ allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a01:7e01::f03c:95ff:fe52:c6f8;
 allow 2a02:16d0:0:5::1;
-allow 2a02:2479:0:6e00::1;
 allow 2a02:2970:1001::4b;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
@@ -1290,6 +1289,7 @@ allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:78fc::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1831,6 +1831,7 @@ allow 51.81.222.62;
 allow 5.181.80.107;
 allow 5.196.95.34;
 allow 5.255.100.219;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1928,6 +1929,7 @@ allow 88.80.20.86;
 allow 88.80.26.2;
 allow 88.80.26.3;
 allow 88.80.26.4;
+allow 89.110.95.200;
 allow 89.147.108.90;
 allow 89.147.110.118;
 allow 89.147.110.154;
