Update lists at 20250512-1200

--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -354,11 +354,9 @@ deny 2a01:7e00::f03c:91ff:fe56:2656;
 deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a01:7e01::f03c:95ff:fe52:c6f8;
 deny 2a02:16d0:0:5::1;
-deny 2a02:2479:0:6e00::1;
 deny 2a02:2970:1001::4b;
 deny 2a02:418:6017::147;
 deny 2a02:418:6017::148;
-deny 2a02:8010:677e:f9d0:215:5dff:fe01:210c;
 deny 2a02:898:218::1;
 deny 2a02:898:218::2;
 deny 2a02:c204:2195:2012::1;
@@ -520,9 +518,11 @@ deny 2a0b:f4c2:1::172;
 deny 2a0b:f4c2:1::173;
 deny 2a0b:f4c2:1::174;
 deny 2a0b:f4c2:1::175;
+deny 2a0b:f4c2:1::176;
 deny 2a0b:f4c2:1::177;
 deny 2a0b:f4c2:1::178;
 deny 2a0b:f4c2:1::179;
+deny 2a0b:f4c2:1::180;
 deny 2a0b:f4c2:1::181;
 deny 2a0b:f4c2:1::182;
 deny 2a0b:f4c2:1::183;
