--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -73,7 +73,6 @@ deny 107.189.4.12;
 deny 107.189.4.209;
 deny 107.189.5.121;
 deny 107.189.5.188;
-deny 107.189.5.249;
 deny 107.189.5.7;
 deny 107.189.6.124;
 deny 107.189.7.141;
@@ -206,6 +205,7 @@ deny 173.44.141.34;
 deny 176.118.193.33;
 deny 176.121.81.51;
 deny 176.58.100.98;
+deny 176.58.121.177;
 deny 176.65.148.133;
 deny 176.65.148.3;
 deny 176.65.149.100;
@@ -292,6 +292,7 @@ deny 185.170.114.25;
 deny 185.183.157.214;
 deny 185.183.159.40;
 deny 185.191.204.254;
+deny 185.193.127.76;
 deny 185.193.52.180;
 deny 185.195.236.55;
 deny 185.195.71.244;
@@ -539,6 +540,7 @@ deny 185.40.4.92;
 deny 185.42.170.203;
 deny 185.56.171.94;
 deny 185.56.83.83;
+deny 185.67.82.114;
 deny 185.82.219.109;
 deny 185.84.31.254;
 deny 188.165.200.97;
@@ -1057,7 +1059,6 @@ deny 2605:6400:30:ed0c:b477:4972:756a:2f42;
 deny 2605:6400:30:edc3::34;
 deny 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 deny 2605:6400:30:efba:dead::;
-deny 2605:6400:30:f04d:2605:6400:30:30;
 deny 2605:6400:30:f05d:c272:5525:72b1:e64c;
 deny 2605:6400:30:f060:be62:b857:b818:9144;
 deny 2605:6400:30:f08c:45b7:4a99:a154:694e;
@@ -1226,6 +1227,7 @@ deny 2a00:1dc0:caff:68::1;
 deny 2a00:1dc0:caff:73::a568;
 deny 2a00:1dc0:caff:8b::24bd;
 deny 2a00:4d80::1;
+deny 2a00:74a0:e000:1003::114;
 deny 2a00:99a0:0:1000::2;
 deny 2a00:c70:1:185:246:84:179:1;
 deny 2a00:fbe4:1ab:ffff::133;
@@ -1236,11 +1238,13 @@ deny 2a01:5e0:36:cf2a::1;
 deny 2a01:6340:2:501::10;
 deny 2a01:6340:2:501::20;
 deny 2a01:7e00::f03c:91ff:fe56:2656;
+deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a01:7e01::f03c:95ff:fe52:c6f8;
 deny 2a02:16d0:0:5::1;
 deny 2a02:2970:1001::4b;
 deny 2a02:418:6017::147;
 deny 2a02:418:6017::148;
+deny 2a02:8010:677e:f9d0:215:5dff:fe01:210c;
 deny 2a02:898:218::1;
 deny 2a02:898:218::2;
 deny 2a02:c204:2195:2012::1;
@@ -1335,6 +1339,7 @@ deny 2a09:61c0::21;
 deny 2a09:61c0::22;
 deny 2a09:61c0::beef;
 deny 2a09:b280:fe01:61::a;
+deny 2a0a:3840:1337:127:0:b9c1:7f4c:1337;
 deny 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 deny 2a0b:64c0:f802:1::a;
 deny 2a0b:64c0:f802:4c::a;
@@ -1560,7 +1565,6 @@ deny 2a0d:bbc7:0:1::50;
 deny 2a0d:bbc7:0:1::7f;
 deny 2a0d:c2c0:1:4::2;
 deny 2a0e:1d80:13:51e8::1;
-deny 2a0e:1d80:17:6f8d::1;
 deny 2a0e:4005:1002:ffff:185:40:4:100;
 deny 2a0e:4005:1002:ffff:185:40:4:101;
 deny 2a0e:4005:1002:ffff:185:40:4:127;
@@ -1680,8 +1684,13 @@ deny 2c0f:6c0:0:4::95ea;
 deny 31.129.22.65;
 deny 31.133.0.210;
 deny 31.184.236.104;
+deny 31.220.75.237;
 deny 31.44.238.25;
 deny 35.0.127.52;
+deny 37.114.50.124;
+deny 37.114.50.142;
+deny 37.114.50.18;
+deny 37.114.50.27;
 deny 37.114.63.5;
 deny 37.120.239.59;
 deny 37.187.5.192;
@@ -1692,7 +1701,6 @@ deny 37.228.129.63;
 deny 37.48.120.196;
 deny 37.48.70.156;
 deny 37.77.56.238;
-deny 38.242.254.131;
 deny 38.97.116.242;
 deny 38.97.116.243;
 deny 38.97.116.244;
@@ -1904,12 +1912,12 @@ deny 80.94.92.106;
 deny 80.94.92.92;
 deny 81.16.33.42;
 deny 81.17.28.95;
-deny 81.181.104.22;
 deny 8.208.26.177;
 deny 8.209.106.19;
 deny 82.221.128.191;
 deny 82.221.131.5;
 deny 82.221.139.190;
+deny 82.68.49.227;
 deny 83.217.9.73;
 deny 83.96.213.63;
 deny 83.97.20.77;
@@ -1931,7 +1939,6 @@ deny 88.80.20.86;
 deny 88.80.26.2;
 deny 88.80.26.3;
 deny 88.80.26.4;
-deny 89.110.95.200;
 deny 89.147.108.90;
 deny 89.147.110.118;
 deny 89.147.110.154;
