--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -521,6 +521,7 @@ allow 185.247.184.33;
 allow 185.252.232.218;
 allow 185.254.196.141;
 allow 185.34.33.2;
+allow 185.35.136.17;
 allow 185.35.202.222;
 allow 185.39.207.83;
 allow 185.40.4.100;
@@ -690,6 +691,7 @@ allow 199.195.251.202;
 allow 199.195.253.124;
 allow 199.195.253.156;
 allow 199.195.253.180;
+allow 2001:0:d911:c0d9:2c91:736a:a41c:8d66;
 allow 2001:1af8:4700:a114:6::1;
 allow 2001:1b60:2:1:3935:104:0:1;
 allow 2001:1b60:3:221:3132:102:0:1;
@@ -948,7 +950,6 @@ allow 216.239.90.19;
 allow 216.73.159.101;
 allow 216.73.159.75;
 allow 217.12.221.131;
-allow 217.154.21.121;
 allow 217.199.199.250;
 allow 23.137.248.100;
 allow 23.137.248.192;
@@ -1244,7 +1245,6 @@ allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a01:7e01::f03c:95ff:fe52:c6f8;
 allow 2a02:16d0:0:5::1;
-allow 2a02:2479:0:6e00::1;
 allow 2a02:2970:1001::4b;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
@@ -1345,7 +1345,6 @@ allow 2a09:b280:fe01:61::a;
 allow 2a0a:3840:1337:127:0:b9c1:7f4c:1337;
 allow 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 allow 2a0b:64c0:f802:1::a;
-allow 2a0b:64c0:f802:4c::a;
 allow 2a0b:7140:8:1:5054:ff:fe43:9f9;
 allow 2a0b:f4c0:16c:10::1;
 allow 2a0b:f4c0:16c:1::1;
@@ -1594,7 +1593,6 @@ allow 2a0e:bfc7:0:4::6e7a;
 allow 2a0e:e701:1198::1;
 allow 2a0f:7803:fac5:cd0::1;
 allow 2a0f:85c1:356:3238::1;
-allow 2a0f:85c1:356:424c::1;
 allow 2a0f:85c1:356:5bdd::beef;
 allow 2a0f:cdc6:500:11e3::2;
 allow 2a0f:df00:0:255::194;
@@ -1686,7 +1684,6 @@ allow 2c0f:6c0:0:4::95ea;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.184.236.104;
-allow 31.220.75.237;
 allow 31.44.238.25;
 allow 35.0.127.52;
 allow 37.114.50.124;
@@ -1703,6 +1700,7 @@ allow 37.228.129.63;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 37.77.56.238;
+allow 38.242.254.131;
 allow 38.97.116.242;
 allow 38.97.116.243;
 allow 38.97.116.244;
@@ -1731,7 +1729,6 @@ allow 45.138.16.42;
 allow 45.138.16.69;
 allow 45.138.16.76;
 allow 45.138.87.142;
-allow 45.139.50.202;
 allow 45.139.50.204;
 allow 45.141.215.110;
 allow 45.141.215.111;
@@ -1895,7 +1892,6 @@ allow 65.87.7.22;
 allow 66.146.193.33;
 allow 66.220.242.222;
 allow 66.78.40.182;
-allow 66.78.40.73;
 allow 67.219.109.141;
 allow 71.19.144.106;
 allow 72.14.179.10;
@@ -1970,6 +1966,7 @@ allow 91.208.75.3;
 allow 91.208.75.4;
 allow 91.219.236.101;
 allow 91.219.236.91;
+allow 91.227.114.153;
 allow 91.92.109.126;
 allow 91.92.109.43;
 allow 92.243.24.163;
