--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -521,6 +521,7 @@ deny 185.247.184.33;
 deny 185.252.232.218;
 deny 185.254.196.141;
 deny 185.34.33.2;
+deny 185.35.136.17;
 deny 185.35.202.222;
 deny 185.39.207.83;
 deny 185.40.4.100;
@@ -690,6 +691,7 @@ deny 199.195.251.202;
 deny 199.195.253.124;
 deny 199.195.253.156;
 deny 199.195.253.180;
+deny 2001:0:d911:c0d9:2c91:736a:a41c:8d66;
 deny 2001:1af8:4700:a114:6::1;
 deny 2001:1b60:2:1:3935:104:0:1;
 deny 2001:1b60:3:221:3132:102:0:1;
@@ -948,7 +950,6 @@ deny 216.239.90.19;
 deny 216.73.159.101;
 deny 216.73.159.75;
 deny 217.12.221.131;
-deny 217.154.21.121;
 deny 217.199.199.250;
 deny 23.137.248.100;
 deny 23.137.248.192;
@@ -1244,7 +1245,6 @@ deny 2a01:7e00::f03c:91ff:fe56:2656;
 deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a01:7e01::f03c:95ff:fe52:c6f8;
 deny 2a02:16d0:0:5::1;
-deny 2a02:2479:0:6e00::1;
 deny 2a02:2970:1001::4b;
 deny 2a02:418:6017::147;
 deny 2a02:418:6017::148;
@@ -1345,7 +1345,6 @@ deny 2a09:b280:fe01:61::a;
 deny 2a0a:3840:1337:127:0:b9c1:7f4c:1337;
 deny 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 deny 2a0b:64c0:f802:1::a;
-deny 2a0b:64c0:f802:4c::a;
 deny 2a0b:7140:8:1:5054:ff:fe43:9f9;
 deny 2a0b:f4c0:16c:10::1;
 deny 2a0b:f4c0:16c:1::1;
@@ -1594,7 +1593,6 @@ deny 2a0e:bfc7:0:4::6e7a;
 deny 2a0e:e701:1198::1;
 deny 2a0f:7803:fac5:cd0::1;
 deny 2a0f:85c1:356:3238::1;
-deny 2a0f:85c1:356:424c::1;
 deny 2a0f:85c1:356:5bdd::beef;
 deny 2a0f:cdc6:500:11e3::2;
 deny 2a0f:df00:0:255::194;
@@ -1686,7 +1684,6 @@ deny 2c0f:6c0:0:4::95ea;
 deny 31.129.22.65;
 deny 31.133.0.210;
 deny 31.184.236.104;
-deny 31.220.75.237;
 deny 31.44.238.25;
 deny 35.0.127.52;
 deny 37.114.50.124;
@@ -1703,6 +1700,7 @@ deny 37.228.129.63;
 deny 37.48.120.196;
 deny 37.48.70.156;
 deny 37.77.56.238;
+deny 38.242.254.131;
 deny 38.97.116.242;
 deny 38.97.116.243;
 deny 38.97.116.244;
@@ -1731,7 +1729,6 @@ deny 45.138.16.42;
 deny 45.138.16.69;
 deny 45.138.16.76;
 deny 45.138.87.142;
-deny 45.139.50.202;
 deny 45.139.50.204;
 deny 45.141.215.110;
 deny 45.141.215.111;
@@ -1895,7 +1892,6 @@ deny 65.87.7.22;
 deny 66.146.193.33;
 deny 66.220.242.222;
 deny 66.78.40.182;
-deny 66.78.40.73;
 deny 67.219.109.141;
 deny 71.19.144.106;
 deny 72.14.179.10;
@@ -1970,6 +1966,7 @@ deny 91.208.75.3;
 deny 91.208.75.4;
 deny 91.219.236.101;
 deny 91.219.236.91;
+deny 91.227.114.153;
 deny 91.92.109.126;
 deny 91.92.109.43;
 deny 92.243.24.163;
