--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -73,6 +73,7 @@ set_real_ip_from 107.189.4.12;
 set_real_ip_from 107.189.4.209;
 set_real_ip_from 107.189.5.121;
 set_real_ip_from 107.189.5.188;
+set_real_ip_from 107.189.5.249;
 set_real_ip_from 107.189.5.7;
 set_real_ip_from 107.189.6.124;
 set_real_ip_from 107.189.7.141;
@@ -169,8 +170,10 @@ set_real_ip_from 162.247.74.204;
 set_real_ip_from 162.247.74.206;
 set_real_ip_from 162.247.74.213;
 set_real_ip_from 162.247.74.216;
+set_real_ip_from 162.247.74.217;
 set_real_ip_from 162.247.74.27;
 set_real_ip_from 162.247.74.7;
+set_real_ip_from 162.247.74.74;
 set_real_ip_from 162.251.5.152;
 set_real_ip_from 163.172.45.102;
 set_real_ip_from 164.132.172.209;
@@ -1063,6 +1066,7 @@ set_real_ip_from 2605:6400:30:ed0c:b477:4972:756a:2f42;
 set_real_ip_from 2605:6400:30:edc3::34;
 set_real_ip_from 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 set_real_ip_from 2605:6400:30:efba:dead::;
+set_real_ip_from 2605:6400:30:f04d:2605:6400:30:30;
 set_real_ip_from 2605:6400:30:f05d:c272:5525:72b1:e64c;
 set_real_ip_from 2605:6400:30:f060:be62:b857:b818:9144;
 set_real_ip_from 2605:6400:30:f08c:45b7:4a99:a154:694e;
@@ -1298,6 +1302,7 @@ set_real_ip_from 2a04:52c0:104:31e6::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
 set_real_ip_from 2a04:52c0:105:78fc::1;
+set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 set_real_ip_from 2a04:52c0:106:d219::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
@@ -1548,8 +1553,6 @@ set_real_ip_from 2a0c:5700:3133:507:c217:cfff:fe09:cd2d;
 set_real_ip_from 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 set_real_ip_from 2a0c:5cc0:1:1::293c:1518;
 set_real_ip_from 2a0c:e300::23;
-set_real_ip_from 2a0d:8140:1fff:22d0::1;
-set_real_ip_from 2a0d:8140:1fff:395e::1;
 set_real_ip_from 2a0d:bbc7:0:1::10a;
 set_real_ip_from 2a0d:bbc7:0:1::132;
 set_real_ip_from 2a0d:bbc7:0:1::1df;
@@ -1713,8 +1716,6 @@ set_real_ip_from 45.13.225.69;
 set_real_ip_from 45.13.225.78;
 set_real_ip_from 45.133.74.53;
 set_real_ip_from 45.134.225.36;
-set_real_ip_from 45.137.99.10;
-set_real_ip_from 45.137.99.216;
 set_real_ip_from 45.138.16.107;
 set_real_ip_from 45.138.16.113;
 set_real_ip_from 45.138.16.164;
@@ -1843,6 +1844,7 @@ set_real_ip_from 51.81.222.62;
 set_real_ip_from 5.181.80.107;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.219;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.103.235;
